Bug 844505 - Remove enablePrivilege from test_form_autocomplete.html. r=mounir
UltraBlame original commit: 20b605f231a0434bea13b3ec0f6e27607526d602

--- a/toolkit/components/satchel/test/test_form_autocomplete.html
+++ b/toolkit/components/satchel/test/test_form_autocomplete.html
@@ -936,19 +936,6 @@ autocomplete
 *
 *
 /
-netscape
-.
-security
-.
-PrivilegeManager
-.
-enablePrivilege
-(
-'
-UniversalXPConnect
-'
-)
-;
 var
 input
 =
@@ -963,11 +950,7 @@ field1
 const
 shiftModifier
 =
-Components
-.
-interfaces
-.
-nsIDOMEvent
+Event
 .
 SHIFT_MASK
 ;
@@ -981,9 +964,9 @@ service
 var
 fh
 =
-Components
+SpecialPowers
 .
-classes
+Cc
 [
 "
 mozilla
@@ -1653,34 +1636,6 @@ runTest
 testNum
 )
 {
-/
-/
-Seems
-we
-need
-to
-enable
-this
-again
-or
-sendKeyEvent
-(
-)
-complaints
-.
-netscape
-.
-security
-.
-PrivilegeManager
-.
-enablePrivilege
-(
-'
-UniversalXPConnect
-'
-)
-;
 ok
 (
 true
@@ -2675,42 +2630,11 @@ shift
 delete
 do
 .
-var
-osString
-=
-Components
-.
-classes
-[
-"
-mozilla
-.
-org
-/
-xre
-/
-app
--
-info
-;
-1
-"
-]
-.
-getService
-(
-Components
-.
-interfaces
-.
-nsIXULRuntime
-)
-.
-OS
-;
 if
 (
-osString
+SpecialPowers
+.
+OS
 =
 =
 "
