Bug 843725 - Add support for changing the value of <input type=range> using the up/down/left/right/pgup/pgdn/home/end keys. r=mounir, r=smaug.
UltraBlame original commit: 96c03dab9222e27932b389bf14ebd160f85fe956

--- a/layout/style/forms.css
+++ b/layout/style/forms.css
@@ -3593,10 +3593,6 @@ block
 !
 important
 ;
-cursor
-:
-default
-;
 width
 :
 12em
@@ -3607,6 +3603,17 @@ height
 .
 3em
 ;
+margin
+:
+0
+0
+.
+7em
+;
+cursor
+:
+default
+;
 background
 :
 none
@@ -3615,12 +3622,12 @@ border
 :
 none
 ;
-margin
+-
+moz
+-
+binding
 :
-0
-0
-.
-7em
+none
 ;
 }
 :
