--- a/toolkit/themes/osx/global/menu.css
+++ b/toolkit/themes/osx/global/menu.css
@@ -876,6 +876,12 @@ iconic
 -
 left
 {
+padding
+-
+top
+:
+1px
+;
 -
 moz
 -
@@ -922,7 +928,7 @@ check
 png
 "
 0
-10
+11
 11
 0
 )
@@ -1125,11 +1131,234 @@ check
 png
 "
 0
-20
+22
 11
-10
+11
 )
 ;
+}
+media
+(
+min
+-
+resolution
+:
+2dppx
+)
+{
+:
+not
+(
+menulist
+)
+>
+menupopup
+>
+menuitem
+[
+checked
+=
+"
+true
+"
+]
+>
+.
+menu
+-
+iconic
+-
+left
+:
+not
+(
+menulist
+)
+>
+menupopup
+>
+menuitem
+[
+selected
+=
+"
+true
+"
+]
+>
+.
+menu
+-
+iconic
+-
+left
+{
+background
+-
+size
+:
+11px
+11px
+;
+background
+-
+image
+:
+-
+moz
+-
+image
+-
+rect
+(
+"
+chrome
+:
+/
+/
+global
+/
+skin
+/
+menu
+/
+menu
+-
+check
+2x
+.
+png
+"
+0
+22
+22
+0
+)
+;
+}
+:
+not
+(
+menulist
+)
+>
+menupopup
+>
+menuitem
+[
+checked
+=
+"
+true
+"
+]
+[
+_moz
+-
+menuactive
+=
+"
+true
+"
+]
+:
+not
+(
+[
+disabled
+=
+"
+true
+"
+]
+)
+>
+.
+menu
+-
+iconic
+-
+left
+:
+not
+(
+menulist
+)
+>
+menupopup
+>
+menuitem
+[
+selected
+=
+"
+true
+"
+]
+[
+_moz
+-
+menuactive
+=
+"
+true
+"
+]
+:
+not
+(
+[
+disabled
+=
+"
+true
+"
+]
+)
+>
+.
+menu
+-
+iconic
+-
+left
+{
+background
+-
+image
+:
+-
+moz
+-
+image
+-
+rect
+(
+"
+chrome
+:
+/
+/
+global
+/
+skin
+/
+menu
+/
+menu
+-
+check
+2x
+.
+png
+"
+0
+44
+22
+22
+)
+;
+}
 }
 menulist
 :
