Bug 845306 - Use 2x images for menu arrows. r=dolske
UltraBlame original commit: 5e9be4f5489d43232c7fd2fbea591553b39efdd1

--- a/toolkit/themes/osx/global/menu.css
+++ b/toolkit/themes/osx/global/menu.css
@@ -405,16 +405,6 @@ moz
 -
 margin
 -
-end
-:
--
-9px
-;
--
-moz
--
-margin
--
 start
 :
 21px
@@ -432,11 +422,39 @@ end
 .
 menu
 -
+accel
+-
+container
+{
+-
+moz
+-
+margin
+-
+end
+:
+-
+9px
+;
+}
+.
+menu
+-
 right
 {
+-
+moz
+-
+margin
+-
+end
+:
+-
+10px
+;
 width
 :
-8px
+9px
 ;
 list
 -
@@ -475,7 +493,7 @@ region
 rect
 (
 0
-8px
+9px
 10px
 0
 )
@@ -516,9 +534,9 @@ region
 rect
 (
 0
-16px
+18px
 10px
-8px
+9px
 )
 ;
 }
@@ -544,9 +562,9 @@ region
 rect
 (
 0
-24px
+27px
 10px
-16px
+18px
 )
 ;
 }
@@ -573,6 +591,148 @@ scaleX
 1
 )
 ;
+}
+media
+(
+min
+-
+resolution
+:
+2dppx
+)
+{
+.
+menu
+-
+right
+>
+image
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+global
+/
+skin
+/
+menu
+/
+menu
+-
+arrow
+2x
+.
+png
+"
+)
+;
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+0
+18px
+20px
+0
+)
+;
+width
+:
+9px
+;
+height
+:
+10px
+;
+}
+.
+menu
+-
+right
+[
+_moz
+-
+menuactive
+=
+"
+true
+"
+]
+:
+not
+(
+[
+disabled
+=
+"
+true
+"
+]
+)
+>
+image
+{
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+0
+36px
+20px
+18px
+)
+;
+}
+.
+menu
+-
+right
+[
+disabled
+=
+"
+true
+"
+]
+>
+image
+{
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+0
+54px
+20px
+36px
+)
+;
+}
 }
 menubar
 >
