--- a/toolkit/themes/osx/global/scrollbox.css
+++ b/toolkit/themes/osx/global/scrollbox.css
@@ -550,9 +550,9 @@ region
 rect
 (
 0
-24px
+27px
 10px
-16px
+18px
 )
 ;
 }
@@ -721,7 +721,7 @@ region
 rect
 (
 0
-8px
+9px
 10px
 0
 )
@@ -748,4 +748,73 @@ padding
 :
 1px
 ;
+}
+media
+(
+min
+-
+resolution
+:
+2dppx
+)
+{
+autorepeatbutton
+>
+.
+autorepeatbutton
+-
+icon
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+global
+/
+skin
+/
+menu
+/
+menu
+-
+arrow
+2x
+.
+png
+"
+)
+;
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+0
+18px
+20px
+0
+)
+;
+width
+:
+9px
+;
+height
+:
+10px
+;
+}
 }
