--- a/toolkit/components/passwordmgr/test/test_privbrowsing_perwindowpb.html
+++ b/toolkit/components/passwordmgr/test/test_privbrowsing_perwindowpb.html
@@ -25,13 +25,20 @@ script
 type
 =
 "
-text
+application
 /
 javascript
 "
 src
 =
 "
+chrome
+:
+/
+/
+mochikit
+/
+content
 /
 tests
 /
@@ -84,6 +91,13 @@ css
 href
 =
 "
+chrome
+:
+/
+/
+mochikit
+/
+content
 /
 tests
 /
@@ -93,7 +107,6 @@ test
 .
 css
 "
-/
 >
 <
 /
@@ -190,19 +203,6 @@ on
 test_notifications
 .
 html
-netscape
-.
-security
-.
-PrivilegeManager
-.
-enablePrivilege
-(
-'
-UniversalXPConnect
-'
-)
-;
 const
 Ci
 =
@@ -227,16 +227,17 @@ results
 var
 testpath
 =
-document
-.
-location
-.
-pathname
-+
 "
 /
-.
-.
+tests
+/
+toolkit
+/
+components
+/
+passwordmgr
+/
+test
 /
 "
 ;
@@ -1280,13 +1281,9 @@ content
 location
 .
 href
+!
 =
-=
-"
-about
-:
-privatebrowsing
-"
+contentPage
 )
 {
 win
@@ -1312,6 +1309,33 @@ onInnerLoad
 true
 )
 ;
+win
+.
+content
+.
+addEventListener
+(
+'
+load
+'
+function
+innerLoad2
+(
+)
+{
+win
+.
+content
+.
+removeEventListener
+(
+'
+load
+'
+innerLoad2
+false
+)
+;
 testWindows
 .
 push
@@ -1333,6 +1357,11 @@ win
 )
 ;
 }
+)
+;
+}
+false
+true
 )
 ;
 }
