--- a/toolkit/components/passwordmgr/test/test_privbrowsing_perwindowpb.html
+++ b/toolkit/components/passwordmgr/test/test_privbrowsing_perwindowpb.html
@@ -25,20 +25,13 @@ script
 type
 =
 "
-application
+text
 /
 javascript
 "
 src
 =
 "
-chrome
-:
-/
-/
-mochikit
-/
-content
 /
 tests
 /
@@ -91,13 +84,6 @@ css
 href
 =
 "
-chrome
-:
-/
-/
-mochikit
-/
-content
 /
 tests
 /
@@ -107,6 +93,7 @@ test
 .
 css
 "
+/
 >
 <
 /
@@ -203,6 +190,19 @@ on
 test_notifications
 .
 html
+netscape
+.
+security
+.
+PrivilegeManager
+.
+enablePrivilege
+(
+'
+UniversalXPConnect
+'
+)
+;
 const
 Ci
 =
@@ -227,17 +227,16 @@ results
 var
 testpath
 =
+document
+.
+location
+.
+pathname
++
 "
 /
-tests
-/
-toolkit
-/
-components
-/
-passwordmgr
-/
-test
+.
+.
 /
 "
 ;
@@ -1281,9 +1280,13 @@ content
 location
 .
 href
-!
 =
-contentPage
+=
+"
+about
+:
+privatebrowsing
+"
 )
 {
 win
@@ -1309,33 +1312,6 @@ onInnerLoad
 true
 )
 ;
-win
-.
-content
-.
-addEventListener
-(
-'
-load
-'
-function
-innerLoad2
-(
-)
-{
-win
-.
-content
-.
-removeEventListener
-(
-'
-load
-'
-innerLoad2
-false
-)
-;
 testWindows
 .
 push
@@ -1357,11 +1333,6 @@ win
 )
 ;
 }
-)
-;
-}
-false
-true
 )
 ;
 }
