bug 797298 make logged out information icon themeable, r=markh
UltraBlame original commit: dcf8ffe7a3a076f16b8ddc8529ac28ee77d316e6

--- a/browser/themes/linux/browser.css
+++ b/browser/themes/linux/browser.css
@@ -11471,6 +11471,33 @@ height
 :
 48px
 ;
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+global
+/
+skin
+/
+icons
+/
+information
+-
+32
+.
+png
+"
+)
+;
 }
 #
 socialUserDisplayName
@@ -16370,6 +16397,41 @@ right
 :
 -
 12px
+;
+}
+.
+social
+-
+statusarea
+-
+user
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+global
+/
+skin
+/
+icons
+/
+information
+-
+32
+.
+png
+"
+)
 ;
 }
 .
