--- a/browser/themes/osx/browser.css
+++ b/browser/themes/osx/browser.css
@@ -13424,6 +13424,33 @@ height
 :
 48px
 ;
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+global
+/
+skin
+/
+icons
+/
+information
+-
+32
+.
+png
+"
+)
+;
 }
 #
 socialUserDisplayName
@@ -27978,6 +28005,41 @@ left
 :
 -
 2px
+;
+}
+.
+social
+-
+statusarea
+-
+user
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+global
+/
+skin
+/
+icons
+/
+information
+-
+32
+.
+png
+"
+)
 ;
 }
 .
