--- a/browser/themes/windows/browser.css
+++ b/browser/themes/windows/browser.css
@@ -13111,6 +13111,33 @@ height
 :
 48px
 ;
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+global
+/
+skin
+/
+icons
+/
+information
+-
+32
+.
+png
+"
+)
+;
 }
 #
 socialUserDisplayName
@@ -20864,6 +20891,33 @@ relative
 cursor
 :
 pointer
+;
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+global
+/
+skin
+/
+icons
+/
+information
+-
+32
+.
+png
+"
+)
 ;
 }
 .
