--- a/browser/metro/theme/platform.css
+++ b/browser/metro/theme/platform.css
@@ -2227,14 +2227,6 @@ padding
 8px
 ;
 }
-richgriditem
-:
-not
-(
-[
-customColorPresent
-]
-)
 .
 richgrid
 -
@@ -2321,12 +2313,22 @@ customColorPresent
 true
 "
 ]
-description
 {
 color
 :
 #
 f1f1f1
+;
+}
+richgriditem
+[
+customImagePresent
+]
+{
+color
+:
+#
+1a1a1a
 ;
 }
 richgriditem
@@ -2358,8 +2360,79 @@ color
 fff
 ;
 }
-richgriditem
-description
+.
+richgrid
+-
+item
+-
+content
+[
+customImagePresent
+]
+{
+height
+:
+120px
+;
+width
+:
+200px
+;
+background
+-
+size
+:
+cover
+;
+background
+-
+position
+:
+center
+;
+background
+-
+repeat
+:
+no
+-
+repeat
+;
+-
+moz
+-
+box
+-
+pack
+:
+end
+;
+padding
+:
+0px
+;
+}
+.
+richgrid
+-
+icon
+-
+container
+[
+customImagePresent
+]
+{
+visibility
+:
+collapse
+;
+}
+.
+richgrid
+-
+item
+-
+desc
 {
 width
 :
@@ -2386,6 +2459,41 @@ left
 0px
 !
 important
+;
+}
+.
+richgrid
+-
+item
+-
+content
+[
+customImagePresent
+]
+>
+.
+richgrid
+-
+item
+-
+desc
+{
+background
+:
+hsla
+(
+0
+2
+%
+98
+%
+.
+95
+)
+;
+margin
+:
+0px
 ;
 }
 richgriditem
