Bug 846380 - Add support for dragging of <input type=range>'s thumb using mouse/touch events. r=smaug, r=mounir.
UltraBlame original commit: 65c8f4a189924998be8b1b5137a201c4c841eea1

--- a/layout/style/forms.css
+++ b/layout/style/forms.css
@@ -3629,6 +3629,17 @@ binding
 :
 none
 ;
+-
+moz
+-
+user
+-
+select
+:
+none
+!
+important
+;
 }
 :
 :
@@ -3699,6 +3710,17 @@ height
 0
 .
 2em
+;
+-
+moz
+-
+user
+-
+select
+:
+none
+!
+important
 ;
 }
 :
@@ -3873,6 +3895,17 @@ svg
 >
 "
 )
+;
+-
+moz
+-
+user
+-
+select
+:
+none
+!
+important
 ;
 }
 %
