--- a/toolkit/components/prompts/test/test_bug625187.html
+++ b/toolkit/components/prompts/test/test_bug625187.html
@@ -314,16 +314,6 @@ dialogNum
 =
 0
 ;
-var
-utils
-=
-SpecialPowers
-.
-getDOMWindowUtils
-(
-window
-)
-;
 function
 hasTabModalPrompts
 (
@@ -773,6 +763,16 @@ false
 false
 0
 null
+)
+;
+var
+utils
+=
+SpecialPowers
+.
+getDOMWindowUtils
+(
+win
 )
 ;
 utils
