Bug 848641 - Update pdf.js to version 0.7.337. r=yury
UltraBlame original commit: 8c5d7b67d20dca1982ae4f22a2d35d8cefc299a1

--- a/browser/extensions/pdfjs/content/web/viewer.css
+++ b/browser/extensions/pdfjs/content/web/viewer.css
@@ -741,6 +741,12 @@ left
 :
 0
 ;
+min
+-
+width
+:
+320px
+;
 -
 webkit
 -
@@ -1428,6 +1434,13 @@ height
 ;
 background
 -
+color
+:
+#
+474747
+;
+background
+-
 image
 :
 url
@@ -2033,7 +2046,7 @@ after
 {
 left
 :
-16px
+13px
 ;
 margin
 -
@@ -2058,7 +2071,7 @@ before
 {
 left
 :
-16px
+13px
 ;
 margin
 -
@@ -2083,7 +2096,7 @@ after
 {
 right
 :
-16px
+13px
 ;
 margin
 -
@@ -2108,7 +2121,7 @@ before
 {
 right
 :
-16px
+13px
 ;
 margin
 -
@@ -5179,6 +5192,10 @@ hsla
 .
 dropdownToolbarButton
 {
+width
+:
+120px
+;
 max
 -
 width
@@ -5561,6 +5578,78 @@ sidebarToggle
 .
 png
 )
+;
+}
+html
+[
+dir
+=
+'
+ltr
+'
+]
+#
+findPrevious
+{
+margin
+-
+left
+:
+3px
+;
+}
+html
+[
+dir
+=
+'
+ltr
+'
+]
+#
+findNext
+{
+margin
+-
+right
+:
+3px
+;
+}
+html
+[
+dir
+=
+'
+rtl
+'
+]
+#
+findPrevious
+{
+margin
+-
+right
+:
+3px
+;
+}
+html
+[
+dir
+=
+'
+rtl
+'
+]
+#
+findNext
+{
+margin
+-
+left
+:
+3px
 ;
 }
 html
@@ -6727,12 +6816,6 @@ auto
 .
 thumbnail
 {
-margin
--
-bottom
-:
-15px
-;
 float
 :
 left
@@ -6763,6 +6846,12 @@ rgba
 .
 5
 )
+;
+margin
+-
+bottom
+:
+10px
 ;
 }
 .
@@ -7331,10 +7420,6 @@ select
 :
 none
 ;
-cursor
-:
-default
-;
 white
 -
 space
@@ -7655,6 +7740,10 @@ style
 :
 italic
 ;
+cursor
+:
+default
+;
 }
 #
 findScrollView
@@ -7732,7 +7821,10 @@ height
 ;
 margin
 :
-10px
+1px
+auto
+-
+8px
 auto
 ;
 position
@@ -7743,41 +7835,35 @@ overflow
 :
 visible
 ;
--
-webkit
--
-box
--
-shadow
+border
 :
-0px
-4px
-10px
-#
-000
+9px
+solid
+transparent
 ;
+background
 -
-moz
+clip
+:
+content
 -
 box
--
-shadow
-:
-0px
-4px
-10px
-#
-000
 ;
-box
+border
 -
-shadow
+image
 :
-0px
-4px
-10px
-#
-000
+url
+(
+images
+/
+shadow
+.
+png
+)
+9
+9
+repeat
 ;
 background
 -
@@ -7815,32 +7901,6 @@ opacity
 ;
 background
 :
-#
-ff0
-;
--
-webkit
--
-box
--
-shadow
-:
-0px
-2px
-10px
-#
-ff0
-;
--
-moz
--
-box
--
-shadow
-:
-0px
-2px
-10px
 #
 ff0
 ;
@@ -8600,14 +8660,16 @@ line
 height
 :
 1
-.
-3
 ;
 white
 -
 space
 :
 pre
+;
+cursor
+:
+text
 ;
 }
 .
@@ -8786,9 +8848,6 @@ color
 #
 FFFF99
 ;
--
-webkit
--
 box
 -
 shadow
@@ -8799,38 +8858,6 @@ shadow
 #
 333
 ;
--
-moz
--
-box
--
-shadow
-:
-0px
-2px
-10px
-#
-333
-;
-box
--
-shadow
-:
-0px
-2px
-10px
-#
-333
-;
-border
--
-radius
-:
-7px
-;
--
-moz
--
 border
 -
 radius
@@ -9362,24 +9389,6 @@ display
 :
 none
 ;
--
-webkit
--
-box
--
-shadow
-:
-none
-;
--
-moz
--
-box
--
-shadow
-:
-none
-;
 box
 -
 shadow
@@ -9676,16 +9685,52 @@ width
 600px
 )
 {
-#
-toolbarViewerRight
-#
-findbar
-#
-viewFind
+.
+hiddenSmallView
 {
 display
 :
 none
+;
+}
+html
+[
+dir
+=
+'
+ltr
+'
+]
+.
+outerCenter
+{
+left
+:
+156px
+;
+}
+html
+[
+dir
+=
+'
+rtr
+'
+]
+.
+outerCenter
+{
+right
+:
+156px
+;
+}
+.
+toolbarButtonSpacer
+{
+width
+:
+0
 ;
 }
 }
