Bug 802546 - Prettify the Stackframes UI, r=rcampbell
UltraBlame original commit: dc25ef7de1f2acd351cce5d2ecc4812bb0fced58

--- a/browser/themes/linux/devtools/debugger.css
+++ b/browser/themes/linux/devtools/debugger.css
@@ -454,6 +454,27 @@ scale
 )
 ;
 }
+.
+devtools
+-
+searchinput
+{
+min
+-
+width
+:
+220px
+;
+-
+moz
+-
+margin
+-
+start
+:
+1px
+;
+}
 #
 searchbox
 -
@@ -651,9 +672,6 @@ border
 radius
 :
 4px
-4px
-4px
-4px
 ;
 }
 .
@@ -662,6 +680,12 @@ dbg
 source
 -
 item
+:
+not
+(
+.
+selected
+)
 :
 not
 (
@@ -785,38 +809,22 @@ in
 out
 ;
 }
-#
-stackframes
+.
+dbg
+-
+stackframe
 {
+width
+:
+auto
+!
+important
+;
 min
 -
-height
+width
 :
-10px
-;
-}
-.
-dbg
--
-stackframe
-{
--
-moz
--
-padding
--
-start
-:
-4px
-;
--
-moz
--
-padding
--
-end
-:
-4px
+64px
 ;
 }
 .
@@ -824,8 +832,30 @@ dbg
 -
 stackframe
 -
-name
+menuitem
+[
+checked
+]
 {
+outline
+:
+1px
+solid
+#
+eee
+;
+margin
+-
+top
+:
+3px
+;
+margin
+-
+bottom
+:
+3px
+;
 font
 -
 weight
@@ -838,6 +868,27 @@ dbg
 -
 stackframe
 -
+menuitem
+-
+title
+{
+-
+moz
+-
+padding
+-
+end
+:
+8px
+;
+}
+.
+dbg
+-
+stackframe
+-
+menuitem
+-
 details
 {
 -
@@ -847,55 +898,13 @@ padding
 -
 start
 :
-4px
-;
-}
-#
-breakpoints
-{
-min
--
-height
-:
-10px
-;
-}
-#
-breakpoints
->
-vbox
-:
-not
-(
-:
-empty
-)
-{
-min
--
-height
-:
-10px
-;
-max
--
-height
-:
-200px
+8px
 ;
 }
 .
 dbg
 -
 breakpoint
-:
-not
-(
-:
-last
--
-child
-)
 {
 border
 -
