--- a/browser/themes/windows/devtools/debugger.css
+++ b/browser/themes/windows/devtools/debugger.css
@@ -462,6 +462,27 @@ scale
 )
 ;
 }
+.
+devtools
+-
+searchinput
+{
+min
+-
+width
+:
+220px
+;
+-
+moz
+-
+margin
+-
+start
+:
+1px
+;
+}
 #
 searchbox
 -
@@ -659,9 +680,6 @@ border
 radius
 :
 4px
-4px
-4px
-4px
 ;
 }
 .
@@ -670,6 +688,12 @@ dbg
 source
 -
 item
+:
+not
+(
+.
+selected
+)
 :
 not
 (
@@ -793,38 +817,22 @@ in
 out
 ;
 }
-#
-stackframes
+.
+dbg
+-
+stackframe
 {
+width
+:
+auto
+!
+important
+;
 min
 -
-height
+width
 :
-10px
-;
-}
-.
-dbg
--
-stackframe
-{
--
-moz
--
-padding
--
-start
-:
-4px
-;
--
-moz
--
-padding
--
-end
-:
-4px
+64px
 ;
 }
 .
@@ -832,8 +840,30 @@ dbg
 -
 stackframe
 -
-name
+menuitem
+[
+checked
+]
 {
+outline
+:
+1px
+solid
+#
+eee
+;
+margin
+-
+top
+:
+3px
+;
+margin
+-
+bottom
+:
+3px
+;
 font
 -
 weight
@@ -846,6 +876,27 @@ dbg
 -
 stackframe
 -
+menuitem
+-
+title
+{
+-
+moz
+-
+padding
+-
+end
+:
+8px
+;
+}
+.
+dbg
+-
+stackframe
+-
+menuitem
+-
 details
 {
 -
@@ -855,55 +906,13 @@ padding
 -
 start
 :
-4px
-;
-}
-#
-breakpoints
-{
-min
--
-height
-:
-10px
-;
-}
-#
-breakpoints
->
-vbox
-:
-not
-(
-:
-empty
-)
-{
-min
--
-height
-:
-10px
-;
-max
--
-height
-:
-200px
+8px
 ;
 }
 .
 dbg
 -
 breakpoint
-:
-not
-(
-:
-last
--
-child
-)
 {
 border
 -
