Bug 847626 - Add a "learn more" link to the Metro geolocation notification [r=ally]
UltraBlame original commit: 98280804365ae535d72757f4f9b92d8d2a05c711

--- a/browser/metro/theme/platform.css
+++ b/browser/metro/theme/platform.css
@@ -43,6 +43,23 @@ size
 font_normal
 ;
 }
+.
+text
+-
+link
+{
+text
+-
+decoration
+:
+none
+;
+color
+:
+#
+1167bd
+;
+}
 textbox
 menulist
 {
@@ -2136,6 +2153,21 @@ rect
 40px
 80px
 )
+;
+}
+.
+notification
+-
+link
+{
+-
+moz
+-
+box
+-
+flex
+:
+9999
 ;
 }
 richgrid
