Bug 837486 - Reposition pinned tabs when resetting tab strip underflow. r=dao
UltraBlame original commit: 4d670756c497784bf4d5a361a3018de253877ed4

--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -277,35 +277,54 @@ collapse
 tabbrowser
 -
 tabs
-:
-not
-(
 [
 overflow
 =
-"
 true
-"
 ]
-)
-[
-using
+>
+.
+tabbrowser
 -
-closing
+arrowscrollbox
+>
+.
+scrollbutton
+-
+up
+[
+collapsed
+=
+true
+]
+#
+tabbrowser
 -
 tabs
--
-spacer
+[
+overflow
+=
+true
 ]
-~
-#
-alltabs
+>
+.
+tabbrowser
 -
-button
+arrowscrollbox
+>
+.
+scrollbutton
+-
+down
+[
+collapsed
+=
+true
+]
 {
 visibility
 :
-hidden
+visible
 ;
 }
 .
