Bug 849460 - Use image-rendering: crisp-edges when upscaling favicons in Awesome Bar and bookmarks menus. r=dolske
UltraBlame original commit: 3dac95162a78e56901f778febb344c04f982fd31

--- a/toolkit/themes/osx/global/autocomplete.css
+++ b/toolkit/themes/osx/global/autocomplete.css
@@ -564,6 +564,36 @@ end
 5px
 ;
 }
+media
+(
+min
+-
+resolution
+:
+2dppx
+)
+{
+image
+.
+ac
+-
+site
+-
+icon
+{
+image
+-
+rendering
+:
+-
+moz
+-
+crisp
+-
+edges
+;
+}
+}
 .
 ac
 -
