Bug 818151 - [toolbox] adapt the toolbox UI to make it fit on the side of the browser r=paul
UltraBlame original commit: 10e454c1640616ea12ff6fff00cfa38bb08d113e

--- a/browser/themes/linux/devtools/toolbox.css
+++ b/browser/themes/linux/devtools/toolbox.css
@@ -1102,17 +1102,27 @@ appearance
 :
 none
 ;
+width
+:
+47px
+;
 min
 -
 width
 :
-88px
+47px
 ;
 min
 -
 height
 :
 32px
+;
+max
+-
+width
+:
+137px
 ;
 color
 :
@@ -1228,65 +1238,12 @@ devtools
 -
 tab
 >
-.
-radio
--
-label
--
-center
--
-box
->
-.
-radio
--
-label
--
-box
+image
 {
--
-moz
--
-appearance
-:
-none
-;
 border
 :
 none
 ;
-padding
-:
-0
-16px
-;
-}
-.
-devtools
--
-tab
->
-.
-radio
--
-label
--
-center
--
-box
->
-.
-radio
--
-label
--
-box
->
-.
-radio
--
-icon
-{
 -
 moz
 -
@@ -1295,6 +1252,15 @@ margin
 end
 :
 6px
+;
+-
+moz
+-
+margin
+-
+start
+:
+16px
 ;
 opacity
 :
@@ -1307,29 +1273,24 @@ opacity
 devtools
 -
 tab
+>
+label
+{
+white
+-
+space
+:
+nowrap
+;
+}
+.
+devtools
+-
+tab
 :
 hover
 >
-.
-radio
--
-label
--
-center
--
-box
->
-.
-radio
--
-label
--
-box
->
-.
-radio
--
-icon
+image
 {
 opacity
 :
@@ -1345,26 +1306,7 @@ tab
 :
 active
 >
-.
-radio
--
-label
--
-center
--
-box
->
-.
-radio
--
-label
--
-box
->
-.
-radio
--
-icon
+image
 .
 devtools
 -
@@ -1375,26 +1317,7 @@ selected
 true
 ]
 >
-.
-radio
--
 label
--
-center
--
-box
->
-.
-radio
--
-label
--
-box
->
-.
-radio
--
-icon
 {
 opacity
 :
