--- a/browser/themes/osx/devtools/toolbox.css
+++ b/browser/themes/osx/devtools/toolbox.css
@@ -962,17 +962,27 @@ appearance
 :
 none
 ;
+width
+:
+47px
+;
 min
 -
 width
 :
-88px
+47px
 ;
 min
 -
 height
 :
 32px
+;
+max
+-
+width
+:
+137px
 ;
 color
 :
@@ -1088,35 +1098,7 @@ devtools
 -
 tab
 >
-.
-radio
--
-label
--
-box
-{
-padding
-:
-0
-16px
-;
-}
-.
-devtools
--
-tab
->
-.
-radio
--
-label
--
-box
->
-.
-radio
--
-icon
+image
 {
 -
 moz
@@ -1126,6 +1108,15 @@ margin
 end
 :
 6px
+;
+-
+moz
+-
+margin
+-
+start
+:
+16px
 ;
 opacity
 :
@@ -1138,20 +1129,24 @@ opacity
 devtools
 -
 tab
+>
+label
+{
+white
+-
+space
+:
+nowrap
+;
+}
+.
+devtools
+-
+tab
 :
 hover
 >
-.
-radio
--
-label
--
-box
->
-.
-radio
--
-icon
+image
 {
 opacity
 :
@@ -1167,17 +1162,7 @@ tab
 :
 active
 >
-.
-radio
--
-label
--
-box
->
-.
-radio
--
-icon
+image
 .
 devtools
 -
@@ -1188,17 +1173,7 @@ selected
 true
 ]
 >
-.
-radio
--
-label
--
-box
->
-.
-radio
--
-icon
+image
 {
 opacity
 :
