--- a/browser/themes/windows/devtools/toolbox.css
+++ b/browser/themes/windows/devtools/toolbox.css
@@ -1099,17 +1099,27 @@ appearance
 :
 none
 ;
+width
+:
+47px
+;
 min
 -
 width
 :
-88px
+47px
 ;
 min
 -
 height
 :
 32px
+;
+max
+-
+width
+:
+137px
 ;
 color
 :
@@ -1234,39 +1244,7 @@ devtools
 -
 tab
 >
-.
-radio
--
-label
--
-box
-{
-border
-:
-none
-;
-padding
-:
-0
-16px
-;
-}
-.
-devtools
--
-tab
->
-.
-radio
--
-label
--
-box
->
-.
-radio
--
-icon
+image
 {
 -
 moz
@@ -1276,6 +1254,15 @@ margin
 end
 :
 6px
+;
+-
+moz
+-
+margin
+-
+start
+:
+16px
 ;
 opacity
 :
@@ -1291,17 +1278,7 @@ tab
 :
 hover
 >
-.
-radio
--
-label
--
-box
->
-.
-radio
--
-icon
+image
 {
 opacity
 :
@@ -1317,17 +1294,7 @@ tab
 :
 active
 >
-.
-radio
--
-label
--
-box
->
-.
-radio
--
-icon
+image
 .
 devtools
 -
@@ -1338,17 +1305,7 @@ selected
 true
 ]
 >
-.
-radio
--
-label
--
-box
->
-.
-radio
--
-icon
+image
 {
 opacity
 :
