--- a/browser/themes/osx/searchbar.css
+++ b/browser/themes/osx/searchbar.css
@@ -278,6 +278,45 @@ searchbar
 engine
 -
 image
+.
+searchbar
+-
+engine
+-
+menuitem
+>
+.
+menu
+-
+iconic
+-
+left
+>
+.
+menu
+-
+iconic
+-
+icon
+{
+image
+-
+rendering
+:
+-
+moz
+-
+crisp
+-
+edges
+;
+}
+.
+searchbar
+-
+engine
+-
+image
 {
 list
 -
