Bug 939783 - console.trace() group traces even if part of trace is different; r=robcee
UltraBlame original commit: 2552d554372d96baf3e26ddaf66468886b51cbb9

--- a/browser/themes/shared/devtools/webconsole.inc.css
+++ b/browser/themes/shared/devtools/webconsole.inc.css
@@ -208,8 +208,7 @@ top
 }
 .
 message
->
-.
+-
 repeats
 {
 -
@@ -282,8 +281,7 @@ weight
 }
 .
 message
->
-.
+-
 repeats
 [
 value
@@ -300,8 +298,7 @@ none
 }
 .
 message
->
-.
+-
 location
 {
 -
@@ -362,18 +359,22 @@ decoration
 :
 none
 ;
+white
+-
+space
+:
+nowrap
+;
 }
 .
 message
->
-.
+-
 location
 :
 hover
 .
 message
->
-.
+-
 location
 :
 focus
@@ -387,8 +388,7 @@ underline
 }
 .
 message
->
-.
+-
 location
 >
 .
@@ -410,17 +410,10 @@ overflow
 :
 hidden
 ;
-white
--
-space
-:
-nowrap
-;
 }
 .
 message
->
-.
+-
 location
 >
 .
@@ -2098,6 +2091,123 @@ none
 ;
 }
 .
+consoleTrace
+.
+body
+>
+div
+{
+display
+:
+flex
+;
+margin
+-
+bottom
+:
+5px
+;
+}
+.
+consoleTrace
+.
+title
+{
+display
+:
+block
+;
+flex
+:
+1
+1
+auto
+;
+}
+.
+stacktrace
+{
+list
+-
+style
+:
+none
+;
+padding
+:
+0
+1em
+0
+1
+.
+5em
+;
+margin
+:
+0
+;
+max
+-
+height
+:
+10em
+;
+overflow
+-
+y
+:
+auto
+;
+border
+:
+1px
+solid
+rgba
+(
+128
+128
+128
+.
+5
+)
+;
+border
+-
+radius
+:
+3px
+;
+}
+.
+stacktrace
+li
+{
+display
+:
+flex
+;
+margin
+:
+0
+;
+}
+.
+stacktrace
+.
+function
+{
+display
+:
+block
+;
+flex
+:
+1
+1
+auto
+;
+}
+.
 theme
 -
 dark
@@ -2185,6 +2295,21 @@ variables
 -
 view
 iframe
+{
+border
+-
+color
+:
+#
+333
+;
+}
+.
+theme
+-
+dark
+.
+stacktrace
 {
 border
 -
@@ -2286,6 +2411,21 @@ variables
 -
 view
 iframe
+{
+border
+-
+color
+:
+#
+ccc
+;
+}
+.
+theme
+-
+light
+.
+stacktrace
 {
 border
 -
