--- a/browser/themes/shared/customizableui/panelUIOverlay.inc.css
+++ b/browser/themes/shared/customizableui/panelUIOverlay.inc.css
@@ -982,6 +982,8 @@ panel
 customization
 -
 placeholder
+-
+child
 {
 -
 moz
@@ -1052,60 +1054,25 @@ panel
 customization
 -
 placeholder
-[
-expand
-]
-.
-panel
 -
-customization
--
-placeholder
-[
-contract
-]
+child
 {
-transition
--
-property
+margin
 :
-width
-;
-transition
--
-duration
-:
-170ms
-;
-transition
--
-delay
-:
-20ms
-;
-transition
--
-timing
--
-function
-:
-ease
--
-in
--
-out
-;
-min
--
-width
-:
+6px
+0
 0
 ;
-max
--
-width
+padding
 :
-none
+2px
+6px
+;
+border
+:
+1px
+solid
+transparent
 ;
 }
 .
