Bug 960051 - Update pdf.js to version 0.8.934. r=bdahl, r=Mossop, r=yury
UltraBlame original commit: 7c5e60cbcc95228516dc580d9b1247f6d9a558b5

--- a/browser/extensions/pdfjs/content/web/viewer.css
+++ b/browser/extensions/pdfjs/content/web/viewer.css
@@ -111,20 +111,7 @@ background
 color
 :
 #
-404040
-;
-background
--
-image
-:
-url
-(
-images
-/
-texture
-.
-png
-)
+000
 ;
 width
 :
@@ -167,20 +154,7 @@ background
 color
 :
 #
-404040
-;
-background
--
-image
-:
-url
-(
-images
-/
-texture
-.
-png
-)
+000
 ;
 width
 :
@@ -728,6 +702,22 @@ hsla
 1
 )
 ;
+}
+html
+[
+dir
+=
+'
+ltr
+'
+]
+#
+sidebarContent
+{
+left
+:
+0
+;
 box
 -
 shadow
@@ -754,22 +744,6 @@ html
 dir
 =
 '
-ltr
-'
-]
-#
-sidebarContent
-{
-left
-:
-0
-;
-}
-html
-[
-dir
-=
-'
 rtl
 '
 ]
@@ -779,14 +753,6 @@ sidebarContent
 right
 :
 0
-;
-}
-#
-viewerContainer
-{
-overflow
-:
-auto
 ;
 box
 -
@@ -801,11 +767,19 @@ hsla
 0
 0
 %
-100
+0
 %
 .
-05
+25
 )
+;
+}
+#
+viewerContainer
+{
+overflow
+:
+auto
 ;
 position
 :
@@ -830,6 +804,69 @@ left
 outline
 :
 none
+;
+}
+html
+[
+dir
+=
+'
+ltr
+'
+]
+#
+viewerContainer
+{
+box
+-
+shadow
+:
+inset
+1px
+0
+0
+hsla
+(
+0
+0
+%
+100
+%
+.
+05
+)
+;
+}
+html
+[
+dir
+=
+'
+rtl
+'
+]
+#
+viewerContainer
+{
+box
+-
+shadow
+:
+inset
+-
+1px
+0
+0
+hsla
+(
+0
+0
+%
+100
+%
+.
+05
+)
 ;
 }
 .
@@ -923,6 +960,18 @@ hsla
 )
 )
 ;
+}
+html
+[
+dir
+=
+'
+ltr
+'
+]
+#
+toolbarSidebar
+{
 box
 -
 shadow
@@ -944,6 +993,76 @@ rgba
 inset
 0
 -
+1px
+0
+hsla
+(
+0
+0
+%
+100
+%
+.
+05
+)
+0
+1px
+0
+hsla
+(
+0
+0
+%
+0
+%
+.
+15
+)
+0
+0
+1px
+hsla
+(
+0
+0
+%
+0
+%
+.
+1
+)
+;
+}
+html
+[
+dir
+=
+'
+rtl
+'
+]
+#
+toolbarSidebar
+{
+box
+-
+shadow
+:
+inset
+1px
+0
+0
+rgba
+(
+0
+0
+0
+0
+.
+25
+)
+inset
+0
 1px
 0
 hsla
@@ -1044,11 +1163,118 @@ hsla
 )
 )
 ;
+}
+html
+[
+dir
+=
+'
+ltr
+'
+]
+#
+toolbarContainer
+.
+findbar
+.
+secondaryToolbar
+{
 box
 -
 shadow
 :
 inset
+1px
+0
+0
+hsla
+(
+0
+0
+%
+100
+%
+.
+08
+)
+inset
+0
+1px
+1px
+hsla
+(
+0
+0
+%
+0
+%
+.
+15
+)
+inset
+0
+-
+1px
+0
+hsla
+(
+0
+0
+%
+100
+%
+.
+05
+)
+0
+1px
+0
+hsla
+(
+0
+0
+%
+0
+%
+.
+15
+)
+0
+1px
+1px
+hsla
+(
+0
+0
+%
+0
+%
+.
+1
+)
+;
+}
+html
+[
+dir
+=
+'
+rtl
+'
+]
+#
+toolbarContainer
+.
+findbar
+.
+secondaryToolbar
+{
+box
+-
+shadow
+:
+inset
+-
 1px
 0
 0
@@ -2554,7 +2780,7 @@ dropdownToolbarButton
 :
 hover
 .
-promptButton
+overlayButton
 :
 hover
 .
@@ -2962,7 +3188,7 @@ toolbarButton
 .
 dropdownToolbarButton
 .
-promptButton
+overlayButton
 .
 secondaryToolbarButton
 {
@@ -3076,7 +3302,7 @@ ltr
 '
 ]
 .
-promptButton
+overlayButton
 html
 [
 dir
@@ -3115,7 +3341,7 @@ rtl
 '
 ]
 .
-promptButton
+overlayButton
 html
 [
 dir
@@ -3146,7 +3372,7 @@ focus
 .
 dropdownToolbarButton
 .
-promptButton
+overlayButton
 .
 secondaryToolbarButton
 :
@@ -3312,7 +3538,7 @@ hover
 :
 active
 .
-promptButton
+overlayButton
 :
 hover
 :
@@ -3939,7 +4165,7 @@ hsl
 ;
 }
 .
-promptButton
+overlayButton
 {
 margin
 :
@@ -5344,6 +5570,50 @@ images
 secondaryToolbarButton
 -
 rotateCw
+.
+png
+)
+;
+}
+.
+secondaryToolbarButton
+.
+handTool
+:
+:
+before
+{
+content
+:
+url
+(
+images
+/
+secondaryToolbarButton
+-
+handTool
+.
+png
+)
+;
+}
+.
+secondaryToolbarButton
+.
+documentProperties
+:
+:
+before
+{
+content
+:
+url
+(
+images
+/
+secondaryToolbarButton
+-
+documentProperties
 .
 png
 )
@@ -6917,54 +7187,6 @@ cursor
 default
 ;
 }
-#
-findScrollView
-{
-position
-:
-absolute
-;
-top
-:
-10px
-;
-bottom
-:
-10px
-;
-left
-:
-10px
-;
-width
-:
-280px
-;
-}
-#
-sidebarControls
-{
-position
-:
-absolute
-;
-width
-:
-180px
-;
-height
-:
-32px
-;
-left
-:
-15px
-;
-bottom
-:
-35px
-;
-}
 .
 canvasWrapper
 {
@@ -7904,6 +8126,412 @@ hsla
 )
 ;
 }
+#
+documentPropertiesContainer
+{
+display
+:
+table
+-
+cell
+;
+vertical
+-
+align
+:
+middle
+;
+text
+-
+align
+:
+center
+;
+}
+#
+documentPropertiesContainer
+>
+*
+{
+display
+:
+inline
+-
+block
+;
+padding
+:
+15px
+;
+border
+-
+spacing
+:
+4px
+;
+max
+-
+width
+:
+350px
+;
+max
+-
+height
+:
+350px
+;
+color
+:
+hsl
+(
+0
+0
+%
+85
+%
+)
+;
+font
+-
+size
+:
+12px
+;
+line
+-
+height
+:
+14px
+;
+text
+-
+align
+:
+left
+;
+cursor
+:
+default
+;
+background
+-
+color
+:
+#
+474747
+;
+background
+-
+image
+:
+url
+(
+images
+/
+texture
+.
+png
+)
+linear
+-
+gradient
+(
+hsla
+(
+0
+0
+%
+32
+%
+.
+99
+)
+hsla
+(
+0
+0
+%
+27
+%
+.
+95
+)
+)
+;
+box
+-
+shadow
+:
+inset
+1px
+0
+0
+hsla
+(
+0
+0
+%
+100
+%
+.
+08
+)
+inset
+0
+1px
+1px
+hsla
+(
+0
+0
+%
+0
+%
+.
+15
+)
+inset
+0
+-
+1px
+0
+hsla
+(
+0
+0
+%
+100
+%
+.
+05
+)
+0
+1px
+0
+hsla
+(
+0
+0
+%
+0
+%
+.
+15
+)
+0
+1px
+1px
+hsla
+(
+0
+0
+%
+0
+%
+.
+1
+)
+;
+}
+#
+documentPropertiesContainer
+.
+separator
+{
+display
+:
+block
+;
+margin
+:
+4px
+0
+4px
+0
+;
+height
+:
+1px
+;
+width
+:
+100
+%
+;
+background
+-
+color
+:
+hsla
+(
+0
+0
+%
+0
+%
+.
+5
+)
+;
+box
+-
+shadow
+:
+0
+0
+0
+1px
+hsla
+(
+0
+0
+%
+100
+%
+.
+08
+)
+;
+}
+#
+documentPropertiesContainer
+.
+row
+{
+display
+:
+table
+-
+row
+;
+}
+html
+[
+dir
+=
+'
+ltr
+'
+]
+#
+documentPropertiesContainer
+.
+row
+>
+*
+{
+display
+:
+table
+-
+cell
+;
+min
+-
+width
+:
+100px
+;
+}
+html
+[
+dir
+=
+'
+rtl
+'
+]
+#
+documentPropertiesContainer
+.
+row
+>
+*
+{
+display
+:
+table
+-
+cell
+;
+min
+-
+width
+:
+100px
+;
+text
+-
+align
+:
+right
+;
+}
+#
+documentPropertiesContainer
+.
+row
+span
+{
+width
+:
+125px
+;
+word
+-
+wrap
+:
+break
+-
+word
+;
+}
+#
+documentPropertiesContainer
+.
+row
+p
+{
+max
+-
+width
+:
+225px
+;
+word
+-
+wrap
+:
+break
+-
+word
+;
+}
+#
+documentPropertiesContainer
+.
+buttonRow
+{
+margin
+-
+top
+:
+10px
+;
+text
+-
+align
+:
+center
+;
+vertical
+-
+align
+:
+middle
+;
+}
 .
 clearBoth
 {
@@ -7928,6 +8556,22 @@ margin
 top
 :
 5px
+;
+visibility
+:
+hidden
+;
+position
+:
+fixed
+;
+right
+:
+0
+;
+top
+:
+0
 ;
 }
 #
@@ -8201,6 +8845,194 @@ rgba
 color
 :
 black
+;
+}
+.
+grab
+-
+to
+-
+pan
+-
+grab
+*
+{
+cursor
+:
+url
+(
+"
+images
+/
+grab
+.
+cur
+"
+)
+move
+!
+important
+;
+cursor
+:
+-
+moz
+-
+grab
+!
+important
+;
+cursor
+:
+grab
+!
+important
+;
+}
+.
+grab
+-
+to
+-
+pan
+-
+grabbing
+.
+grab
+-
+to
+-
+pan
+-
+grabbing
+*
+{
+cursor
+:
+url
+(
+"
+images
+/
+grabbing
+.
+cur
+"
+)
+move
+!
+important
+;
+cursor
+:
+-
+moz
+-
+grabbing
+!
+important
+;
+cursor
+:
+grabbing
+!
+important
+;
+}
+.
+grab
+-
+to
+-
+pan
+-
+grab
+input
+.
+grab
+-
+to
+-
+pan
+-
+grab
+textarea
+.
+grab
+-
+to
+-
+pan
+-
+grab
+button
+.
+grab
+-
+to
+-
+pan
+-
+grab
+button
+*
+.
+grab
+-
+to
+-
+pan
+-
+grab
+select
+.
+grab
+-
+to
+-
+pan
+-
+grab
+option
+{
+cursor
+:
+auto
+!
+important
+;
+}
+.
+grab
+-
+to
+-
+pan
+-
+grab
+a
+[
+href
+]
+.
+grab
+-
+to
+-
+pan
+-
+grab
+a
+[
+href
+]
+*
+{
+cursor
+:
+pointer
+!
+important
 ;
 }
 page
