Bug 940307 - fix Australis menu-button styling in menu panel, r=mikedeboer
UltraBlame original commit: 88c332b7c8758593aefc5dc28c225197772c9e00

--- a/browser/themes/shared/customizableui/panelUIOverlay.inc.css
+++ b/browser/themes/shared/customizableui/panelUIOverlay.inc.css
@@ -567,18 +567,6 @@ shadow
 none
 ;
 }
-#
-PanelUI
--
-contents
-{
-padding
-:
-.
-5em
-0
-;
-}
 .
 panelUI
 -
@@ -809,6 +797,12 @@ right
 :
 auto
 ;
+padding
+:
+.
+5em
+0
+;
 max
 -
 width
@@ -927,55 +921,22 @@ wide
 -
 item
 )
-#
-PanelUI
+.
+panelUI
 -
-contents
+grid
+.
 toolbarbutton
-toolbarpaletteitem
-[
-place
-=
-"
-panel
-"
-]
->
-toolbarbutton
-toolbarpaletteitem
-[
-place
-=
-"
+-
+1
+.
+customization
+-
 palette
-"
-]
->
+.
 toolbarbutton
-toolbarpaletteitem
-[
-place
-=
-"
-panel
-"
-]
->
-toolbaritem
->
-toolbarbutton
-toolbarpaletteitem
-[
-place
-=
-"
-palette
-"
-]
->
-toolbaritem
->
-toolbarbutton
+-
+1
 .
 panel
 -
@@ -1073,6 +1034,155 @@ border
 1px
 solid
 transparent
+;
+}
+.
+panelUI
+-
+grid
+.
+toolbarbutton
+-
+1
+>
+.
+toolbarbutton
+-
+menubutton
+-
+dropmarker
+{
+-
+moz
+-
+box
+-
+align
+:
+center
+;
+width
+:
+16px
+;
+-
+moz
+-
+margin
+-
+start
+:
+-
+16px
+;
+height
+:
+40px
+;
+max
+-
+height
+:
+40px
+;
+padding
+:
+0
+;
+}
+.
+panelUI
+-
+grid
+.
+toolbarbutton
+-
+1
+:
+not
+(
+[
+buttonover
+]
+)
+buttonStateHover
+>
+.
+toolbarbutton
+-
+menubutton
+-
+dropmarker
+{
+background
+-
+color
+:
+hsla
+(
+210
+4
+%
+10
+%
+.
+1
+)
+!
+important
+;
+border
+-
+radius
+:
+0
+0
+0
+2px
+;
+}
+.
+panelUI
+-
+grid
+.
+toolbarbutton
+-
+1
+:
+not
+(
+[
+buttonover
+]
+)
+buttonStateHover
+>
+.
+toolbarbutton
+-
+menubutton
+-
+dropmarker
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+{
+border
+-
+radius
+:
+0
+0
+2px
+0
 ;
 }
 .
@@ -1251,26 +1361,67 @@ align
 center
 ;
 }
-#
-PanelUI
+.
+panelUI
 -
-contents
+grid
 .
 toolbarbutton
 -
 1
-:
-not
-(
-:
+>
+.
+toolbarbutton
 -
-moz
+menubutton
 -
-any
-(
-primaryToolbarButtons
-)
-)
+button
+>
+.
+toolbarbutton
+-
+icon
+.
+panelUI
+-
+grid
+.
+toolbarbutton
+-
+1
+>
+.
+toolbarbutton
+-
+icon
+.
+customization
+-
+palette
+.
+toolbarbutton
+-
+1
+>
+.
+toolbarbutton
+-
+menubutton
+-
+button
+>
+.
+toolbarbutton
+-
+icon
+.
+customization
+-
+palette
+.
+toolbarbutton
+-
+1
 >
 .
 toolbarbutton
@@ -1284,130 +1435,6 @@ customization
 placeholder
 -
 child
->
-.
-toolbarbutton
--
-icon
-#
-bookmarks
--
-menu
--
-button
-[
-cui
--
-areatype
-=
-"
-menu
--
-panel
-"
-]
->
-.
-toolbarbutton
--
-menubutton
--
-button
->
-.
-toolbarbutton
--
-icon
-toolbarbutton
-[
-cui
--
-areatype
-=
-"
-menu
--
-panel
-"
-]
->
-.
-toolbarbutton
--
-icon
-toolbaritem
-[
-cui
--
-areatype
-=
-"
-menu
--
-panel
-"
-]
->
-toolbarbutton
->
-.
-toolbarbutton
--
-icon
-toolbarpaletteitem
-[
-place
-=
-"
-palette
-"
-]
->
-#
-bookmarks
--
-menu
--
-button
->
-.
-toolbarbutton
--
-menubutton
--
-button
->
-.
-toolbarbutton
--
-icon
-toolbarpaletteitem
-[
-place
-=
-"
-palette
-"
-]
->
-toolbarbutton
->
-.
-toolbarbutton
--
-icon
-toolbarpaletteitem
-[
-place
-=
-"
-palette
-"
-]
->
-toolbaritem
->
-toolbarbutton
 >
 .
 toolbarbutton
@@ -2388,6 +2415,21 @@ toolbarbutton
 customizationmode
 -
 button
+.
+panelUI
+-
+grid
+.
+toolbarbutton
+-
+1
+>
+.
+toolbarbutton
+-
+menubutton
+-
+button
 #
 edit
 -
@@ -2667,6 +2709,27 @@ margin
 top
 :
 6px
+;
+}
+.
+panelUI
+-
+grid
+.
+toolbarbutton
+-
+1
+>
+.
+toolbarbutton
+-
+menubutton
+-
+button
+{
+border
+:
+0
 ;
 }
 panelview
