--- a/browser/themes/windows/browser.css
+++ b/browser/themes/windows/browser.css
@@ -16771,6 +16771,86 @@ top
 5em
 ;
 }
+#
+sync
+-
+popup
+{
+padding
+:
+10px
+;
+}
+#
+sync
+-
+popup
+-
+icon
+{
+width
+:
+32px
+;
+background
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+content
+/
+abouthome
+/
+sync
+.
+png
+"
+)
+center
+center
+no
+-
+repeat
+;
+}
+#
+sync
+-
+popup
+-
+inner
+{
+width
+:
+0
+;
+padding
+-
+left
+:
+10px
+;
+}
+#
+sync
+-
+popup
+-
+desc
+-
+prefs
+{
+margin
+:
+0
+;
+}
 .
 statuspanel
 -
