Bug 963593 - [Australis] Stop scaling cut/copy/paste and zoom control icons on Retina. r=Gijs.
UltraBlame original commit: 05b43154936d3db9ea2c7d6cbb90ab25fbebda65

--- a/browser/themes/osx/browser.css
+++ b/browser/themes/osx/browser.css
@@ -8675,6 +8675,76 @@ edit
 controls
 inAnyPanel
 >
+toolbarbutton
+>
+.
+toolbarbutton
+-
+icon
+#
+zoom
+-
+controls
+inAnyPanel
+>
+toolbarbutton
+>
+.
+toolbarbutton
+-
+icon
+toolbarpaletteitem
+[
+place
+=
+"
+palette
+"
+]
+>
+#
+edit
+-
+controls
+>
+toolbarbutton
+>
+.
+toolbarbutton
+-
+icon
+toolbarpaletteitem
+[
+place
+=
+"
+palette
+"
+]
+>
+#
+zoom
+-
+controls
+>
+toolbarbutton
+>
+.
+toolbarbutton
+-
+icon
+{
+width
+:
+16px
+;
+}
+#
+edit
+-
+controls
+inAnyPanel
+>
 #
 cut
 -
