--- a/browser/themes/shared/devtools/toolbars.inc.css
+++ b/browser/themes/shared/devtools/toolbars.inc.css
@@ -2966,6 +2966,232 @@ devtools
 command
 -
 paintflashing
+.
+png
+"
+)
+;
+}
+#
+command
+-
+button
+-
+responsive
+>
+image
+{
+background
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+devtools
+/
+command
+-
+responsivemode
+.
+png
+"
+)
+;
+}
+#
+command
+-
+button
+-
+tilt
+>
+image
+{
+background
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+devtools
+/
+command
+-
+tilt
+.
+png
+"
+)
+;
+}
+#
+command
+-
+button
+-
+scratchpad
+>
+image
+{
+background
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+devtools
+/
+command
+-
+scratchpad
+.
+png
+"
+)
+;
+background
+-
+size
+:
+48px
+16px
+;
+}
+#
+command
+-
+button
+-
+pick
+>
+image
+{
+background
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+devtools
+/
+command
+-
+pick
+.
+png
+"
+)
+;
+}
+#
+command
+-
+button
+-
+splitconsole
+>
+image
+{
+background
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+devtools
+/
+command
+-
+console
+.
+png
+"
+)
+;
+}
+media
+(
+min
+-
+resolution
+:
+2dppx
+)
+{
+#
+command
+-
+button
+-
+paintflashing
+>
+image
+{
+background
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+devtools
+/
+command
+-
+paintflashing
 2x
 .
 png
@@ -3080,13 +3306,6 @@ png
 "
 )
 ;
-background
--
-size
-:
-48px
-16px
-;
 }
 #
 command
@@ -3160,6 +3379,7 @@ png
 )
 ;
 }
+}
 .
 devtools
 -
@@ -3176,6 +3396,12 @@ background
 :
 #
 252c33
+;
+min
+-
+height
+:
+28px
 ;
 border
 :
@@ -3290,7 +3516,7 @@ min
 -
 height
 :
-26px
+28px
 ;
 max
 -
