Bug 924050 - [Australis] Make the Downloads button have a correct icon post-indicator-load in the menu panel. r=mikedeboer.
UltraBlame original commit: e82db1c2c4c928f86d5fc9090e67fba39c78f46f

--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -4995,12 +4995,52 @@ button
 [
 indicator
 ]
+:
+not
+(
+[
+cui
+-
+areatype
+=
+"
+menu
+-
+panel
+"
+]
+)
 >
 image
 .
 toolbarbutton
 -
 icon
+#
+downloads
+-
+button
+[
+indicator
+]
+[
+cui
+-
+areatype
+=
+"
+menu
+-
+panel
+"
+]
+>
+#
+downloads
+-
+indicator
+-
+anchor
 {
 display
 :
