--- a/browser/themes/linux/downloads/indicator.css
+++ b/browser/themes/linux/downloads/indicator.css
@@ -164,6 +164,64 @@ png
 downloads
 -
 button
+[
+cui
+-
+areatype
+=
+"
+menu
+-
+panel
+"
+]
+[
+attention
+]
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+downloads
+/
+download
+-
+glow
+-
+menuPanel
+.
+png
+"
+)
+;
+-
+moz
+-
+image
+-
+region
+:
+auto
+;
+}
+#
+downloads
+-
+button
 :
 not
 (
