Bug 964204 - fix drag glitches in Australis panel and palette, r=mikedeboer
UltraBlame original commit: cdef896777c5d8eecc9101ee9a908ed47c22010e

--- a/browser/themes/shared/customizableui/customizeMode.inc.css
+++ b/browser/themes/shared/customizableui/customizeMode.inc.css
@@ -498,6 +498,16 @@ toolbarpaletteitem
 [
 notransition
 ]
+.
+panel
+-
+customization
+-
+placeholder
+toolbarpaletteitem
+[
+notransition
+]
 [
 place
 =
