Bug 962212 (part 2) - Basic private browsing in Metro, preffed off [r=ally]
UltraBlame original commit: 05075ab03a2b46da0fd1b3e17a41226e6acfaa9e

--- a/browser/metro/theme/browser.css
+++ b/browser/metro/theme/browser.css
@@ -924,6 +924,22 @@ none
 important
 ;
 }
+documenttab
+[
+private
+]
+.
+documenttab
+-
+thumbnail
+{
+background
+-
+color
+:
+purple
+;
+}
 .
 documenttab
 -
