Bug 940286 [Australis] - Set hover state in panel menu on keyboard nav [r=Gijs]
UltraBlame original commit: 4b86247721b2429a3bb0011f6efc009df668100d

--- a/browser/themes/shared/customizableui/panelUIOverlay.inc.css
+++ b/browser/themes/shared/customizableui/panelUIOverlay.inc.css
@@ -27,21 +27,33 @@ any
 disabled
 ]
 [
+open
+]
+[
 checked
 =
 "
 true
 "
 ]
-[
-open
-]
 :
 active
 )
 )
 :
+-
+moz
+-
+any
+(
+:
 hover
+[
+_moz
+-
+menuactive
+]
+)
 %
 define
 buttonStateActive
@@ -70,6 +82,13 @@ true
 ]
 :
 hover
+:
+active
+[
+_moz
+-
+menuactive
+]
 :
 active
 )
