--- a/browser/themes/shared/customizableui/panelUIOverlay.inc.css
+++ b/browser/themes/shared/customizableui/panelUIOverlay.inc.css
@@ -1572,6 +1572,12 @@ display
 :
 flex
 ;
+flex
+-
+direction
+:
+column
+;
 background
 -
 color
@@ -1611,11 +1617,34 @@ margin
 :
 0
 ;
-min
+}
+#
+PanelUI
 -
-height
+footer
+-
+inner
+{
+display
 :
-4em
+flex
+;
+box
+-
+shadow
+:
+0
+-
+1px
+0
+rgba
+(
+0
+0
+0
+.
+15
+)
 ;
 }
 #
@@ -1673,6 +1702,12 @@ help
 #
 PanelUI
 -
+fxa
+-
+status
+#
+PanelUI
+-
 customize
 #
 PanelUI
@@ -1687,6 +1722,12 @@ padding
 :
 10px
 0
+;
+min
+-
+height
+:
+2em
 ;
 -
 moz
@@ -1746,6 +1787,48 @@ horizontal
 #
 PanelUI
 -
+fxa
+-
+status
+{
+width
+:
+calc
+(
+menuPanelWidth
++
+20px
+)
+;
+border
+-
+bottom
+-
+style
+:
+solid
+;
+}
+#
+PanelUI
+-
+fxa
+-
+status
+[
+signedin
+]
+{
+font
+-
+weight
+:
+bold
+;
+}
+#
+PanelUI
+-
 help
 #
 PanelUI
@@ -1759,6 +1842,17 @@ width
 46px
 ;
 }
+#
+PanelUI
+-
+fxa
+-
+status
+>
+.
+toolbarbutton
+-
+text
 #
 PanelUI
 -
@@ -1829,6 +1923,12 @@ end
 0
 ;
 }
+#
+PanelUI
+-
+fxa
+-
+status
 #
 PanelUI
 -
@@ -1951,6 +2051,12 @@ png
 )
 ;
 }
+#
+PanelUI
+-
+fxa
+-
+status
 #
 PanelUI
 -
@@ -2172,6 +2278,71 @@ box
 shadow
 :
 none
+;
+}
+#
+PanelUI
+-
+fxa
+-
+status
+:
+not
+(
+[
+disabled
+]
+)
+:
+hover
+{
+background
+-
+color
+:
+rgba
+(
+0
+0
+0
+0
+.
+1
+)
+;
+border
+-
+bottom
+-
+color
+:
+rgba
+(
+0
+0
+0
+0
+.
+1
+)
+;
+box
+-
+shadow
+:
+0
+-
+1px
+0
+rgba
+(
+0
+0
+0
+0
+.
+2
+)
 ;
 }
 #
