Bug 944947 - Australis - fix binding and styling for wrapped toolbarbuttons to correctly hide/show wrapped labels, r=Enn
UltraBlame original commit: d61e7d073cda0c634d881fe6c23e6d0bdd92855f

--- a/toolkit/content/xul.css
+++ b/toolkit/content/xul.css
@@ -831,6 +831,20 @@ toolbar
 mode
 =
 "
+icons
+"
+]
+.
+toolbarbutton
+-
+multiline
+-
+text
+toolbar
+[
+mode
+=
+"
 text
 "
 ]
@@ -844,7 +858,12 @@ display
 none
 ;
 }
+.
 toolbarbutton
+-
+multiline
+-
+text
 :
 not
 (
@@ -856,14 +875,10 @@ true
 "
 ]
 )
->
 .
 toolbarbutton
 -
-multiline
--
 text
-toolbarbutton
 [
 wrap
 =
@@ -871,11 +886,6 @@ wrap
 true
 "
 ]
->
-.
-toolbarbutton
--
-text
 {
 display
 :
