Bug 964929 - [Australis] Implement doorhanger for sync errors r=gavin
UltraBlame original commit: 24ddba64280c9e330fd9bbbffa9599002bec6797

--- a/browser/themes/osx/browser.css
+++ b/browser/themes/osx/browser.css
@@ -28042,20 +28042,20 @@ top
 5em
 ;
 }
-#
+.
 sync
 -
-popup
+panel
 {
 padding
 :
 10px
 ;
 }
-#
+.
 sync
 -
-popup
+panel
 -
 icon
 {
@@ -28083,8 +28083,8 @@ sync
 png
 "
 )
-center
-center
+top
+left
 no
 -
 repeat
@@ -28099,10 +28099,10 @@ resolution
 2dppx
 )
 {
-#
+.
 sync
 -
-popup
+panel
 -
 icon
 {
@@ -28127,8 +28127,8 @@ sync
 png
 "
 )
-center
-center
+top
+left
 no
 -
 repeat
@@ -28142,10 +28142,10 @@ size
 ;
 }
 }
-#
+.
 sync
 -
-popup
+panel
 -
 inner
 {
@@ -28160,14 +28160,106 @@ left
 10px
 ;
 }
+.
+sync
+-
+panel
+-
+button
+-
+box
+{
+margin
+-
+top
+:
+1em
+;
+}
+.
+sync
+-
+panel
+-
+button
+{
+hudButton
+margin
+:
+0
+;
+min
+-
+width
+:
+72px
+;
+min
+-
+height
+:
+22px
+;
+}
+.
+sync
+-
+panel
+-
+button
+:
+hover
+:
+active
+{
+hudButtonPressed
+}
+.
+sync
+-
+panel
+-
+button
+:
+-
+moz
+-
+focusring
+{
+hudButtonFocused
+}
 #
 sync
 -
-popup
+error
 -
-desc
+panel
 -
-prefs
+title
+{
+font
+-
+weight
+:
+bold
+;
+}
+#
+sync
+-
+start
+-
+panel
+-
+subtitle
+#
+sync
+-
+error
+-
+panel
+-
+subtitle
 {
 margin
 :
