--- a/browser/themes/windows/browser.css
+++ b/browser/themes/windows/browser.css
@@ -16767,20 +16767,20 @@ top
 5em
 ;
 }
-#
+.
 sync
 -
-popup
+panel
 {
 padding
 :
 10px
 ;
 }
-#
+.
 sync
 -
-popup
+panel
 -
 icon
 {
@@ -16808,17 +16808,17 @@ sync
 png
 "
 )
-center
-center
+top
+left
 no
 -
 repeat
 ;
 }
-#
+.
 sync
 -
-popup
+panel
 -
 inner
 {
@@ -16833,14 +16833,106 @@ left
 10px
 ;
 }
+.
+sync
+-
+panel
+-
+button
+-
+box
+{
+margin
+-
+top
+:
+1em
+;
+}
+.
+sync
+-
+panel
+-
+button
+{
+hudButton
+margin
+:
+0
+;
+min
+-
+width
+:
+72px
+;
+min
+-
+height
+:
+22px
+;
+}
+.
+sync
+-
+panel
+-
+button
+:
+hover
+:
+active
+{
+hudButtonPressed
+}
+.
+sync
+-
+panel
+-
+button
+:
+-
+moz
+-
+focusring
+{
+hudButtonFocused
+}
 #
 sync
 -
-popup
+error
 -
-desc
+panel
 -
-prefs
+title
+{
+font
+-
+weight
+:
+bold
+;
+}
+#
+sync
+-
+start
+-
+panel
+-
+subtitle
+#
+sync
+-
+error
+-
+panel
+-
+subtitle
 {
 margin
 :
