[Australis] Bug 963095: adjust toolbar widget panel styling. r=Gijs
UltraBlame original commit: c175d9ca4939fa464e8ed42a28740dad44c7abcd

--- a/browser/themes/osx/customizableui/panelUIOverlay.css
+++ b/browser/themes/osx/customizableui/panelUIOverlay.css
@@ -284,6 +284,16 @@ menu
 BMB_bookmarksPopup
 >
 menuitem
+:
+not
+(
+.
+panel
+-
+subview
+-
+footer
+)
 {
 padding
 -
@@ -298,17 +308,6 @@ bottom
 5px
 ;
 }
-#
-BMB_bookmarksPopup
->
-menuitem
->
-.
-menu
--
-accel
--
-container
 #
 BMB_bookmarksPopup
 >
