--- a/browser/themes/shared/customizableui/panelUIOverlay.inc.css
+++ b/browser/themes/shared/customizableui/panelUIOverlay.inc.css
@@ -421,6 +421,52 @@ hsla
 )
 inset
 ;
+border
+-
+radius
+:
+0
+;
+}
+.
+cui
+-
+widget
+-
+panelview
+.
+panel
+-
+subview
+-
+header
+{
+display
+:
+none
+;
+}
+.
+cui
+-
+widget
+-
+panelview
+.
+subviewbutton
+.
+panel
+-
+subview
+-
+footer
+{
+margin
+:
+4px
+0
+0
+;
 }
 #
 PanelUI
@@ -557,15 +603,54 @@ overflow
 :
 hidden
 ;
-padding
-:
-0
-;
 box
 -
 shadow
 :
 none
+;
+}
+#
+PanelUI
+-
+popup
+>
+.
+panel
+-
+arrowcontainer
+>
+.
+panel
+-
+arrowcontent
+.
+cui
+-
+widget
+-
+panel
+>
+.
+panel
+-
+arrowcontainer
+>
+.
+panel
+-
+arrowcontent
+>
+.
+popup
+-
+internal
+-
+box
+{
+padding
+:
+0
 ;
 }
 .
@@ -737,8 +822,8 @@ mainview
 toolbarbutton
 -
 text
-#
-customizationui
+.
+cui
 -
 widget
 -
@@ -771,6 +856,59 @@ display
 moz
 -
 box
+;
+}
+.
+cui
+-
+widget
+-
+panel
+>
+.
+panel
+-
+arrowcontainer
+>
+.
+panel
+-
+arrowcontent
+{
+padding
+:
+4px
+0
+;
+}
+.
+cui
+-
+widget
+-
+panel
+.
+cui
+-
+widget
+-
+panelWithFooter
+>
+.
+panel
+-
+arrowcontainer
+>
+.
+panel
+-
+arrowcontent
+{
+padding
+-
+bottom
+:
+0
 ;
 }
 #
@@ -2570,7 +2708,6 @@ panelview
 toolbarbutton
 -
 1
-panelview
 .
 subviewbutton
 .
@@ -2616,14 +2753,6 @@ controls
 inAnyPanel
 >
 toolbarbutton
-#
-BMB_bookmarksPopup
->
-menu
-#
-BMB_bookmarksPopup
->
-menuitem
 {
 -
 moz
@@ -2695,10 +2824,6 @@ duration
 ;
 }
 .
-PanelUI
--
-subView
-.
 subviewbutton
 .
 panel
@@ -2719,10 +2844,6 @@ none
 ;
 }
 .
-PanelUI
--
-subView
-.
 subviewbutton
 .
 panel
@@ -2733,6 +2854,19 @@ footer
 >
 .
 toolbarbutton
+-
+text
+.
+subviewbutton
+.
+panel
+-
+subview
+-
+footer
+>
+.
+menu
 -
 text
 {
@@ -2753,10 +2887,6 @@ center
 ;
 }
 .
-PanelUI
--
-subView
-.
 subviewbutton
 :
 not
@@ -2776,6 +2906,23 @@ margin
 ;
 }
 .
+subviewbutton
+:
+not
+(
+.
+panel
+-
+subview
+-
+footer
+)
+>
+.
+toolbarbutton
+-
+text
+.
 PanelUI
 -
 subView
@@ -2793,7 +2940,30 @@ footer
 )
 >
 .
-toolbarbutton
+menu
+-
+text
+.
+PanelUI
+-
+subView
+.
+subviewbutton
+:
+not
+(
+.
+panel
+-
+subview
+-
+footer
+)
+>
+.
+menu
+-
+iconic
 -
 text
 {
@@ -2807,25 +2977,35 @@ size
 ;
 }
 .
-PanelUI
+cui
 -
-subView
+widget
+-
+panelview
 .
 subviewbutton
+:
+not
+(
 .
-bookmark
+panel
 -
-item
+subview
+-
+footer
+)
 {
-font
+margin
 -
-weight
+left
 :
-normal
+4px
 ;
-color
+margin
+-
+right
 :
-inherit
+4px
 ;
 }
 .
@@ -2910,7 +3090,6 @@ toolbarbutton
 -
 1
 buttonStateHover
-panelview
 .
 subviewbutton
 buttonStateHover
@@ -2944,16 +3123,6 @@ controls
 inAnyPanel
 >
 toolbarbutton
-buttonStateHover
-#
-BMB_bookmarksPopup
->
-menu
-buttonStateHover
-#
-BMB_bookmarksPopup
->
-menuitem
 buttonStateHover
 {
 background
@@ -3022,7 +3191,6 @@ toolbarbutton
 -
 1
 buttonStateActive
-panelview
 .
 subviewbutton
 buttonStateActive
@@ -3057,16 +3225,6 @@ controls
 inAnyPanel
 >
 toolbarbutton
-buttonStateActive
-#
-BMB_bookmarksPopup
->
-menu
-buttonStateActive
-#
-BMB_bookmarksPopup
->
-menuitem
 buttonStateActive
 {
 background
@@ -3123,36 +3281,25 @@ inset
 #
 BMB_bookmarksPopup
 >
-menu
-#
-BMB_bookmarksPopup
->
-menuitem
+.
+subviewbutton
 {
 font
 :
 inherit
 ;
+font
+-
+weight
+:
+normal
+;
 }
 #
 BMB_bookmarksPopup
 >
-menu
-:
-not
-(
-[
-disabled
-=
-"
-true
-"
-]
-)
-#
-BMB_bookmarksPopup
->
-menuitem
+.
+subviewbutton
 :
 not
 (
@@ -3271,6 +3418,55 @@ margin
 :
 5px
 0
+;
+}
+.
+subviewbutton
+>
+.
+menu
+-
+accel
+-
+container
+{
+-
+moz
+-
+box
+-
+pack
+:
+start
+;
+-
+moz
+-
+margin
+-
+start
+:
+10px
+;
+-
+moz
+-
+margin
+-
+end
+:
+auto
+;
+color
+:
+hsl
+(
+0
+0
+%
+50
+%
+)
 ;
 }
 #
@@ -4249,6 +4445,32 @@ padding
 0
 ;
 }
+.
+cui
+-
+widget
+-
+panelview
+#
+widget
+-
+overflow
+-
+scroller
+{
+overflow
+-
+y
+:
+auto
+;
+overflow
+-
+x
+:
+hidden
+;
+}
 #
 widget
 -
@@ -4261,18 +4483,6 @@ max
 height
 :
 30em
-;
-overflow
--
-y
-:
-auto
-;
-overflow
--
-x
-:
-hidden
 ;
 margin
 -
@@ -4736,8 +4946,8 @@ current
 toolbarbutton
 -
 text
-#
-customizationui
+.
+cui
 -
 widget
 -
