Bug 947915 - fix sync button pending state on Australis win7 glass on menubar/tabstoolbar, r=mikedeboer
UltraBlame original commit: 35f758e7ac6ae4070a733d0fca8f63afa1ebef6d

--- a/browser/themes/windows/browser.css
+++ b/browser/themes/windows/browser.css
@@ -6714,6 +6714,15 @@ sync
 -
 button
 [
+cui
+-
+areatype
+=
+"
+toolbar
+"
+]
+[
 status
 =
 "
@@ -6745,6 +6754,8 @@ throbber
 png
 "
 )
+!
+important
 ;
 -
 moz
