Bug 964217 - search item is broken in Australis' customize code, r=mikedeboer
UltraBlame original commit: 849724d4081e38dbf64621b3b8f51aeb549a2168

--- a/browser/themes/shared/customizableui/panelUIOverlay.inc.css
+++ b/browser/themes/shared/customizableui/panelUIOverlay.inc.css
@@ -1567,6 +1567,36 @@ toolbarbutton
 -
 icon
 .
+panelUI
+-
+grid
+#
+bookmarks
+-
+toolbar
+-
+placeholder
+>
+.
+toolbarbutton
+-
+icon
+.
+customization
+-
+palette
+#
+bookmarks
+-
+toolbar
+-
+placeholder
+>
+.
+toolbarbutton
+-
+icon
+.
 panel
 -
 customization
@@ -3714,21 +3744,11 @@ min
 -
 width
 :
-calc
-(
-menuPanelWidth
-/
-3
-)
+7em
 ;
 width
 :
-calc
-(
-menuPanelWidth
-/
-3
-)
+7em
 ;
 }
 #
