--- a/browser/themes/shared/customizableui/customizeMode.inc.css
+++ b/browser/themes/shared/customizableui/customizeMode.inc.css
@@ -980,6 +980,39 @@ none
 ;
 }
 #
+wrapper
+-
+personal
+-
+bookmarks
+:
+not
+(
+[
+place
+=
+"
+toolbar
+"
+]
+)
+>
+#
+personal
+-
+bookmarks
+{
+-
+moz
+-
+box
+-
+pack
+:
+center
+;
+}
+#
 customization
 -
 palette
