Bug 962282 - Flip the Metro back button arrows and tab outline in RTL locales. r=mbrubeck
UltraBlame original commit: 67fcec5a2779eb6c553f13e30e4a978a8be04f31

--- a/browser/metro/theme/browser.css
+++ b/browser/metro/theme/browser.css
@@ -1156,6 +1156,62 @@ repeat
 .
 documenttab
 -
+crop
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+.
+documenttab
+-
+selection
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+documenttab
+[
+selected
+]
+.
+documenttab
+-
+selection
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+{
+transform
+:
+scaleX
+(
+-
+1
+)
+;
+}
+.
+documenttab
+-
 close
 {
 background
@@ -2308,20 +2364,6 @@ dir
 (
 ltr
 )
-#
-overlay
--
-back
-:
--
-moz
--
-locale
--
-dir
-(
-rtl
-)
 {
 right
 :
@@ -2932,22 +2974,6 @@ ltr
 )
 :
 hover
-#
-overlay
--
-back
-:
--
-moz
--
-locale
--
-dir
-(
-rtl
-)
-:
-hover
 {
 background
 -
@@ -2970,6 +2996,80 @@ scale
 .
 2
 )
+;
+}
+#
+overlay
+-
+back
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+:
+hover
+{
+transform
+:
+translateX
+(
+-
+40px
+)
+scale
+(
+1
+.
+2
+)
+scaleX
+(
+-
+1
+)
+;
+}
+#
+overlay
+-
+back
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+{
+transform
+:
+scaleX
+(
+-
+1
+)
+;
+right
+:
+-
+70px
+;
+background
+-
+position
+:
+right
+9px
+center
 ;
 }
 #
@@ -3381,6 +3481,44 @@ forward_transition_length
 ease
 -
 out
+;
+}
+#
+back
+-
+button
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+#
+forward
+-
+button
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+{
+transform
+:
+scaleX
+(
+-
+1
+)
 ;
 }
 #
@@ -5717,6 +5855,32 @@ box
 pack
 :
 center
+;
+}
+#
+panel
+-
+close
+-
+button
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+{
+transform
+:
+scaleX
+(
+-
+1
+)
 ;
 }
 media
