--- a/browser/metro/theme/flyoutpanel.css
+++ b/browser/metro/theme/flyoutpanel.css
@@ -372,6 +372,32 @@ close
 -
 button
 :
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+{
+transform
+:
+scaleX
+(
+-
+1
+)
+;
+}
+.
+flyout
+-
+close
+-
+button
+:
 hover
 {
 -
