Bug 965541 - [Australis] Fix sync widget styling located in the panel UI r=gijs
UltraBlame original commit: 8c00a78919c3fc349077691a8d07d24f04dd0174

--- a/browser/themes/shared/customizableui/panelUIOverlay.inc.css
+++ b/browser/themes/shared/customizableui/panelUIOverlay.inc.css
@@ -1819,6 +1819,8 @@ rgba
 PanelUI
 -
 footer
+-
+inner
 >
 toolbarseparator
 {
@@ -1853,6 +1855,8 @@ margin
 PanelUI
 -
 footer
+-
+inner
 :
 hover
 >
@@ -1959,15 +1963,6 @@ fxa
 -
 status
 {
-width
-:
-calc
-(
-menuPanelWidth
-+
-20px
-)
-;
 border
 -
 bottom
@@ -1975,6 +1970,23 @@ bottom
 style
 :
 solid
+;
+}
+#
+PanelUI
+-
+fxa
+-
+status
+>
+.
+toolbarbutton
+-
+text
+{
+width
+:
+0
 ;
 }
 #
@@ -2031,6 +2043,15 @@ toolbarbutton
 -
 text
 {
+margin
+:
+0
+;
+padding
+:
+0
+6px
+;
 text
 -
 align
@@ -2062,6 +2083,26 @@ display
 none
 ;
 }
+#
+PanelUI
+-
+fxa
+-
+status
+>
+.
+toolbarbutton
+-
+icon
+#
+PanelUI
+-
+customize
+>
+.
+toolbarbutton
+-
+icon
 #
 PanelUI
 -
