Bug 962677 - [Australis] Use content-deck and toolbar margins for the customize mode transition. r=jaws.
UltraBlame original commit: da8776bc458e01bf9a7c7fa35794210c50b3c6ab

--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -5613,9 +5613,19 @@ auto
 ;
 }
 #
-tab
+navigator
 -
-view
+toolbox
+>
+toolbar
+:
+not
+(
+#
+TabsToolbar
+)
+#
+content
 -
 deck
 {
@@ -5623,7 +5633,12 @@ transition
 -
 property
 :
-padding
+margin
+-
+left
+margin
+-
+right
 ;
 transition
 -
@@ -5651,6 +5666,31 @@ deck
 [
 fastcustomizeanimation
 ]
+#
+navigator
+-
+toolbox
+>
+toolbar
+:
+not
+(
+#
+TabsToolbar
+)
+#
+tab
+-
+view
+-
+deck
+[
+fastcustomizeanimation
+]
+#
+content
+-
+deck
 {
 transition
 -
