--- a/browser/themes/linux/browser.css
+++ b/browser/themes/linux/browser.css
@@ -14097,41 +14097,6 @@ fixed
 main
 -
 window
-:
--
-moz
--
-any
-(
-[
-customize
--
-entering
-]
-[
-customize
--
-entered
-]
-)
-#
-tab
--
-view
--
-deck
-{
-padding
-:
-0
-2em
-2em
-;
-}
-#
-main
--
-window
 [
 customize
 -
@@ -14412,6 +14377,32 @@ left
 3px
 solid
 transparent
+;
+}
+#
+main
+-
+window
+[
+customizing
+]
+#
+TabsToolbar
+:
+:
+after
+{
+margin
+-
+left
+:
+2em
+;
+margin
+-
+right
+:
+2em
 ;
 }
 #
