--- a/browser/themes/windows/browser.css
+++ b/browser/themes/windows/browser.css
@@ -11898,6 +11898,17 @@ padding
 ;
 }
 #
+main
+-
+window
+:
+not
+(
+[
+customizing
+]
+)
+#
 TabsToolbar
 :
 not
@@ -18621,41 +18632,6 @@ fixed
 ;
 }
 #
-main
--
-window
-:
--
-moz
--
-any
-(
-[
-customize
--
-entering
-]
-[
-customize
--
-entered
-]
-)
-#
-tab
--
-view
--
-deck
-{
-padding
-:
-0
-2em
-2em
-;
-}
-#
 customization
 -
 container
@@ -18683,6 +18659,34 @@ clip
 padding
 -
 box
+;
+}
+#
+main
+-
+window
+[
+customizing
+]
+#
+navigator
+-
+toolbox
+:
+:
+after
+{
+margin
+-
+left
+:
+2em
+;
+margin
+-
+right
+:
+2em
 ;
 }
 #
