[Australis] Backed out changeset da8776bc458e (bug 962677) for mochitest-bc failures.
UltraBlame original commit: b1d99c87978703fcfc0b395d75d8800e966e55f8

--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -5613,19 +5613,9 @@ auto
 ;
 }
 #
-navigator
+tab
 -
-toolbox
->
-toolbar
-:
-not
-(
-#
-TabsToolbar
-)
-#
-content
+view
 -
 deck
 {
@@ -5633,12 +5623,7 @@ transition
 -
 property
 :
-margin
--
-left
-margin
--
-right
+padding
 ;
 transition
 -
@@ -5666,31 +5651,6 @@ deck
 [
 fastcustomizeanimation
 ]
-#
-navigator
--
-toolbox
->
-toolbar
-:
-not
-(
-#
-TabsToolbar
-)
-#
-tab
--
-view
--
-deck
-[
-fastcustomizeanimation
-]
-#
-content
--
-deck
 {
 transition
 -
