--- a/browser/themes/osx/browser.css
+++ b/browser/themes/osx/browser.css
@@ -20289,9 +20289,12 @@ fullscreen
 "
 ]
 [
+customizing
+]
+[
 customize
 -
-entered
+exiting
 ]
 )
 #
@@ -30774,34 +30777,35 @@ top
 main
 -
 window
+:
+-
+moz
+-
+any
+(
 [
-tabsintitlebar
+customize
+-
+entering
 ]
 [
 customize
 -
 entered
 ]
+)
 #
-titlebar
+tab
 -
-content
+view
+-
+deck
 {
-margin
--
-bottom
+padding
 :
-0px
-!
-important
-;
-margin
--
-top
-:
-11px
-!
-important
+0
+2em
+2em
 ;
 }
 #
@@ -31279,48 +31283,6 @@ width
 24px
 ;
 }
-}
-#
-main
--
-window
-[
-customizing
-]
-#
-navigator
--
-toolbox
-:
-:
-after
-#
-main
--
-window
-[
-customize
--
-entered
-]
-#
-TabsToolbar
-:
-:
-after
-{
-margin
--
-left
-:
-2em
-;
-margin
--
-right
-:
-2em
-;
 }
 #
 main
