--- a/browser/themes/windows/browser.css
+++ b/browser/themes/windows/browser.css
@@ -11898,17 +11898,6 @@ padding
 ;
 }
 #
-main
--
-window
-:
-not
-(
-[
-customizing
-]
-)
-#
 TabsToolbar
 :
 not
@@ -18632,6 +18621,41 @@ fixed
 ;
 }
 #
+main
+-
+window
+:
+-
+moz
+-
+any
+(
+[
+customize
+-
+entering
+]
+[
+customize
+-
+entered
+]
+)
+#
+tab
+-
+view
+-
+deck
+{
+padding
+:
+0
+2em
+2em
+;
+}
+#
 customization
 -
 container
@@ -18659,34 +18683,6 @@ clip
 padding
 -
 box
-;
-}
-#
-main
--
-window
-[
-customizing
-]
-#
-navigator
--
-toolbox
-:
-:
-after
-{
-margin
--
-left
-:
-2em
-;
-margin
--
-right
-:
-2em
 ;
 }
 #
