--- a/browser/themes/shared/devtools/widgets.inc.css
+++ b/browser/themes/shared/devtools/widgets.inc.css
@@ -60,6 +60,16 @@ end
 :
 3px
 ;
+max
+-
+height
+:
+25px
+;
+height
+:
+25px
+;
 margin
 -
 bottom
@@ -69,364 +79,6 @@ bottom
 ;
 }
 .
-breadcrumbs
--
-widget
--
-container
-:
--
-moz
--
-locale
--
-dir
-(
-ltr
-)
-:
-:
-after
-{
-content
-:
-'
-'
-;
-display
-:
-block
-;
-background
--
-image
-:
-url
-(
-breadcrumbs
-/
-ltr
--
-start
-.
-png
-)
-url
-(
-breadcrumbs
-/
-ltr
--
-start
--
-selected
-.
-png
-)
-url
-(
-breadcrumbs
-/
-ltr
--
-start
--
-pressed
-.
-png
-)
-url
-(
-breadcrumbs
-/
-ltr
--
-start
--
-selected
--
-pressed
-.
-png
-)
-url
-(
-breadcrumbs
-/
-ltr
--
-middle
-.
-png
-)
-url
-(
-breadcrumbs
-/
-ltr
--
-middle
--
-selected
-.
-png
-)
-url
-(
-breadcrumbs
-/
-ltr
--
-middle
--
-pressed
-.
-png
-)
-url
-(
-breadcrumbs
-/
-ltr
--
-middle
--
-selected
--
-pressed
-.
-png
-)
-url
-(
-breadcrumbs
-/
-ltr
--
-end
-.
-png
-)
-url
-(
-breadcrumbs
-/
-ltr
--
-end
--
-selected
-.
-png
-)
-url
-(
-breadcrumbs
-/
-ltr
--
-end
--
-pressed
-.
-png
-)
-url
-(
-breadcrumbs
-/
-ltr
--
-end
--
-selected
--
-pressed
-.
-png
-)
-;
-}
-.
-breadcrumbs
--
-widget
--
-container
-:
--
-moz
--
-locale
--
-dir
-(
-rtl
-)
-:
-:
-after
-{
-content
-:
-'
-'
-;
-display
-:
-block
-;
-background
--
-image
-:
-url
-(
-breadcrumbs
-/
-rtl
--
-start
-.
-png
-)
-url
-(
-breadcrumbs
-/
-rtl
--
-start
--
-selected
-.
-png
-)
-url
-(
-breadcrumbs
-/
-rtl
--
-start
--
-pressed
-.
-png
-)
-url
-(
-breadcrumbs
-/
-rtl
--
-start
--
-selected
--
-pressed
-.
-png
-)
-url
-(
-breadcrumbs
-/
-rtl
--
-middle
-.
-png
-)
-url
-(
-breadcrumbs
-/
-rtl
--
-middle
--
-selected
-.
-png
-)
-url
-(
-breadcrumbs
-/
-rtl
--
-middle
--
-pressed
-.
-png
-)
-url
-(
-breadcrumbs
-/
-rtl
--
-middle
--
-selected
--
-pressed
-.
-png
-)
-url
-(
-breadcrumbs
-/
-rtl
--
-end
-.
-png
-)
-url
-(
-breadcrumbs
-/
-rtl
--
-end
--
-selected
-.
-png
-)
-url
-(
-breadcrumbs
-/
-rtl
--
-end
--
-pressed
-.
-png
-)
-url
-(
-breadcrumbs
-/
-rtl
--
-end
--
-selected
--
-pressed
-.
-png
-)
-;
-}
-.
 scrollbutton
 -
 up
@@ -444,260 +96,15 @@ none
 ;
 background
 :
-linear
--
-gradient
-(
-hsla
-(
-212
-7
-%
-57
-%
-.
-35
-)
-hsla
-(
-212
-7
-%
-57
-%
-.
-1
-)
-)
-padding
--
-box
+transparent
 ;
 box
 -
 shadow
 :
-0
-1px
-0
-hsla
-(
-210
-16
-%
-76
-%
-.
-15
-)
-inset
-0
-0
-0
-1px
-hsla
-(
-210
-16
-%
-76
-%
-.
-15
-)
-inset
-0
-1px
-0
-hsla
-(
-210
-16
-%
-76
-%
-.
-15
-)
+none
 ;
 border
-:
-1px
-solid
-hsla
-(
-210
-8
-%
-5
-%
-.
-45
-)
-;
-margin
-:
-0
-0
-1px
-;
-}
-.
-scrollbutton
--
-up
-:
-not
-(
-[
-disabled
-]
-)
-:
-active
-:
-hover
-.
-scrollbutton
--
-down
-:
-not
-(
-[
-disabled
-]
-)
-:
-active
-:
-hover
-{
-background
-:
-linear
--
-gradient
-(
-hsla
-(
-220
-6
-%
-10
-%
-.
-3
-)
-hsla
-(
-212
-7
-%
-57
-%
-.
-15
-)
-65
-%
-hsla
-(
-212
-7
-%
-57
-%
-.
-3
-)
-)
-;
-box
--
-shadow
-:
-0
-0
-3px
-hsla
-(
-210
-8
-%
-5
-%
-.
-25
-)
-inset
-0
-1px
-3px
-hsla
-(
-210
-8
-%
-5
-%
-.
-25
-)
-inset
-0
-1px
-0
-hsla
-(
-210
-16
-%
-76
-%
-.
-15
-)
-;
-border
--
-color
-:
-hsla
-(
-210
-8
-%
-5
-%
-.
-6
-)
-;
-}
-.
-scrollbutton
--
-up
->
-.
-toolbarbutton
--
-icon
-.
-scrollbutton
--
-down
->
-.
-toolbarbutton
--
-icon
-{
--
-moz
--
-appearance
 :
 none
 ;
@@ -707,6 +114,77 @@ style
 -
 image
 :
+none
+;
+margin
+:
+0
+;
+padding
+:
+0
+;
+}
+.
+scrollbutton
+-
+up
+>
+.
+toolbarbutton
+-
+icon
+.
+scrollbutton
+-
+down
+>
+.
+toolbarbutton
+-
+icon
+{
+-
+moz
+-
+appearance
+:
+none
+;
+width
+:
+7px
+;
+height
+:
+16px
+;
+background
+-
+size
+:
+14px
+16px
+;
+background
+-
+position
+:
+0
+center
+;
+background
+-
+repeat
+:
+no
+-
+repeat
+;
+background
+-
+image
+:
 url
 (
 "
@@ -718,26 +196,69 @@ png
 "
 )
 ;
+list
 -
-moz
+style
 -
 image
--
-region
 :
-rect
-(
-0px
-7px
-16px
-0px
-)
+none
 ;
 margin
 :
 0
-5px
+8px
 ;
+padding
+:
+0
+;
+}
+media
+(
+min
+-
+resolution
+:
+2dppx
+)
+{
+.
+scrollbutton
+-
+up
+>
+.
+toolbarbutton
+-
+icon
+.
+scrollbutton
+-
+down
+>
+.
+toolbarbutton
+-
+icon
+{
+background
+-
+image
+:
+url
+(
+"
+breadcrumbs
+-
+scrollbutton
+2x
+.
+png
+"
+)
+;
+}
 }
 .
 scrollbutton
@@ -780,20 +301,13 @@ toolbarbutton
 -
 icon
 {
+background
 -
-moz
--
-image
--
-region
+position
 :
-rect
-(
-0px
-14px
-16px
+-
 7px
-)
+center
 ;
 }
 .
@@ -826,6 +340,165 @@ opacity
 0
 .
 5
+;
+}
+.
+scrollbutton
+-
+up
+:
+-
+moz
+-
+locale
+-
+dir
+(
+ltr
+)
+.
+scrollbutton
+-
+down
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+{
+border
+-
+right
+:
+solid
+1px
+rgba
+(
+255
+255
+255
+.
+1
+)
+;
+border
+-
+left
+:
+solid
+1px
+transparent
+;
+box
+-
+shadow
+:
+3px
+0px
+3px
+-
+3px
+#
+181d20
+;
+}
+.
+scrollbutton
+-
+down
+:
+-
+moz
+-
+locale
+-
+dir
+(
+ltr
+)
+.
+scrollbutton
+-
+up
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+{
+border
+-
+right
+:
+solid
+1px
+transparent
+;
+border
+-
+left
+:
+solid
+1px
+rgba
+(
+255
+255
+255
+.
+1
+)
+;
+box
+-
+shadow
+:
+-
+3px
+0px
+3px
+-
+3px
+#
+181d20
+;
+}
+.
+scrollbutton
+-
+up
+[
+disabled
+]
+.
+scrollbutton
+-
+down
+[
+disabled
+]
+{
+box
+-
+shadow
+:
+none
+;
+border
+-
+color
+:
+transparent
 ;
 }
 .
@@ -877,6 +550,192 @@ scaleX
 ;
 }
 .
+breadcrumb
+-
+separator
+-
+container
+{
+position
+:
+fixed
+;
+top
+:
+-
+1000px
+;
+left
+:
+-
+1000px
+;
+}
+#
+breadcrumb
+-
+separator
+-
+before
+#
+breadcrumb
+-
+separator
+-
+after
+#
+breadcrumb
+-
+separator
+-
+normal
+{
+width
+:
+12px
+;
+height
+:
+25px
+;
+overflow
+:
+hidden
+;
+}
+#
+breadcrumb
+-
+separator
+-
+before
+#
+breadcrumb
+-
+separator
+-
+after
+:
+after
+{
+background
+:
+#
+1d4f73
+;
+}
+#
+breadcrumb
+-
+separator
+-
+after
+#
+breadcrumb
+-
+separator
+-
+before
+:
+after
+{
+background
+:
+#
+343c45
+;
+}
+#
+breadcrumb
+-
+separator
+-
+normal
+{
+background
+:
+url
+(
+breadcrumbs
+-
+divider
+2x
+.
+png
+)
+no
+-
+repeat
+center
+right
+;
+background
+-
+size
+:
+12px
+24px
+;
+}
+#
+breadcrumb
+-
+separator
+-
+before
+:
+after
+#
+breadcrumb
+-
+separator
+-
+after
+:
+after
+{
+content
+:
+"
+"
+;
+display
+:
+block
+;
+width
+:
+25px
+;
+height
+:
+25px
+;
+transform
+:
+translateX
+(
+-
+18px
+)
+rotate
+(
+45deg
+)
+;
+-
+moz
+-
+box
+-
+sizing
+:
+border
+-
+box
+;
+}
+.
 breadcrumbs
 -
 widget
@@ -896,55 +755,32 @@ appearance
 :
 none
 ;
-overflow
-:
-hidden
-;
-min
--
-width
-:
-85px
-;
-max
--
-width
-:
-250px
-;
 min
 -
 height
 :
 25px
 ;
-border
--
-style
-:
-solid
-;
-border
+min
 -
 width
 :
-1px
-13px
-2px
-13px
+65px
 ;
 margin
 :
-0
--
-11px
-0
 0
 ;
 padding
 :
 0
-9px
+8px
+0
+20px
+;
+border
+:
+none
 ;
 outline
 :
@@ -969,30 +805,332 @@ widget
 -
 item
 :
+not
+(
+[
+checked
+]
+)
+{
+background
+:
 -
 moz
 -
-focusring
->
+element
+(
+#
+breadcrumb
+-
+separator
+-
+normal
+)
+no
+-
+repeat
+center
+left
+;
+}
+.
+breadcrumbs
+-
+widget
+-
+item
+[
+checked
+]
++
+.
+breadcrumbs
+-
+widget
+-
+item
+{
+background
+:
+-
+moz
+-
+element
+(
+#
+breadcrumb
+-
+separator
+-
+after
+)
+no
+-
+repeat
+0
+0
+;
+}
+.
+breadcrumbs
+-
+widget
+-
+item
+[
+checked
+]
+{
+background
+:
+-
+moz
+-
+element
+(
+#
+breadcrumb
+-
+separator
+-
+before
+)
+no
+-
+repeat
+0
+0
+;
+background
+-
+color
+:
+#
+1d4f73
+;
+}
+.
+breadcrumbs
+-
+widget
+-
+item
+:
+first
+-
+child
+{
+background
+-
+image
+:
+none
+;
+}
+.
+breadcrumbs
+-
+widget
+-
+item
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+{
+padding
+:
+0
+20px
+0
+8px
+;
+}
+.
+breadcrumbs
+-
+widget
+-
+item
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+.
+breadcrumbs
+-
+widget
+-
+item
+[
+checked
+]
++
+.
+breadcrumbs
+-
+widget
+-
+item
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+{
+background
+-
+position
+:
+center
+right
+;
+}
+#
+breadcrumb
+-
+separator
+-
+before
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+#
+breadcrumb
+-
+separator
+-
+after
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+#
+breadcrumb
+-
+separator
+-
+normal
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+{
+transform
+:
+scaleX
+(
+-
+1
+)
+;
+}
+#
+breadcrumb
+-
+separator
+-
+before
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+:
+after
+#
+breadcrumb
+-
+separator
+-
+after
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+:
+after
+{
+transform
+:
+translateX
+(
+-
+5px
+)
+rotate
+(
+45deg
+)
+;
+}
+.
+breadcrumbs
+-
+widget
+-
+item
+:
+not
+(
+[
+checked
+]
+)
+:
+hover
 label
 {
-border
--
-bottom
+color
 :
-1px
-dotted
-hsla
-(
-210
-30
-%
-85
-%
-0
-.
-4
-)
+white
 ;
 }
 .
@@ -1012,19 +1150,6 @@ widget
 item
 -
 tag
-{
-color
-:
-hsl
-(
-208
-100
-%
-60
-%
-)
-;
-}
 .
 breadcrumbs
 -
@@ -1042,19 +1167,6 @@ widget
 item
 -
 id
-{
-color
-:
-hsl
-(
-205
-100
-%
-70
-%
-)
-;
-}
 .
 breadcrumbs
 -
@@ -1077,14 +1189,8 @@ classes
 {
 color
 :
-hsl
-(
-20
-100
-%
-70
-%
-)
+#
+f5f7fa
 ;
 }
 .
@@ -1107,7 +1213,7 @@ classes
 color
 :
 #
-8d99a6
+b6babf
 ;
 }
 .
@@ -1123,1436 +1229,8 @@ classes
 {
 color
 :
-hsl
-(
-20
-100
-%
-85
-%
-)
-;
-}
-.
-breadcrumbs
--
-widget
--
-item
-:
--
-moz
--
-locale
--
-dir
-(
-ltr
-)
-{
-border
--
-image
-:
-url
-(
-"
-breadcrumbs
-/
-ltr
--
-middle
-.
-png
-"
-)
-1
-13
-2
-13
-fill
-stretch
-;
-}
-.
-breadcrumbs
--
-widget
--
-item
-:
-not
-(
-[
-checked
-]
-)
-:
-hover
-:
-active
-:
--
-moz
--
-locale
--
-dir
-(
-ltr
-)
-{
-border
--
-image
-:
-url
-(
-"
-breadcrumbs
-/
-ltr
--
-middle
--
-pressed
-.
-png
-"
-)
-1
-13
-2
-13
-fill
-stretch
-;
-}
-.
-breadcrumbs
--
-widget
--
-item
-[
-checked
-]
-:
--
-moz
--
-locale
--
-dir
-(
-ltr
-)
-{
-border
--
-image
-:
-url
-(
-"
-breadcrumbs
-/
-ltr
--
-middle
--
-selected
-.
-png
-"
-)
-1
-13
-2
-13
-fill
-stretch
-;
-}
-.
-breadcrumbs
--
-widget
--
-item
-[
-checked
-]
-:
-hover
-:
-active
-:
--
-moz
--
-locale
--
-dir
-(
-ltr
-)
-{
-border
--
-image
-:
-url
-(
-"
-breadcrumbs
-/
-ltr
--
-middle
--
-selected
--
-pressed
-.
-png
-"
-)
-1
-13
-2
-13
-fill
-stretch
-;
-}
-.
-breadcrumbs
--
-widget
--
-item
-:
-first
--
-of
--
-type
-:
--
-moz
--
-locale
--
-dir
-(
-ltr
-)
-{
-border
--
-image
-:
-url
-(
-"
-breadcrumbs
-/
-ltr
--
-start
-.
-png
-"
-)
-1
-13
-2
-13
-fill
-stretch
-;
-}
-.
-breadcrumbs
--
-widget
--
-item
-:
-first
--
-of
--
-type
-:
-not
-(
-[
-checked
-]
-)
-:
-hover
-:
-active
-:
--
-moz
--
-locale
--
-dir
-(
-ltr
-)
-{
-border
--
-image
-:
-url
-(
-"
-breadcrumbs
-/
-ltr
--
-start
--
-pressed
-.
-png
-"
-)
-1
-13
-2
-13
-fill
-stretch
-;
-}
-.
-breadcrumbs
--
-widget
--
-item
-:
-first
--
-of
--
-type
-[
-checked
-]
-:
--
-moz
--
-locale
--
-dir
-(
-ltr
-)
-{
-border
--
-image
-:
-url
-(
-"
-breadcrumbs
-/
-ltr
--
-start
--
-selected
-.
-png
-"
-)
-1
-13
-2
-13
-fill
-stretch
-;
-}
-.
-breadcrumbs
--
-widget
--
-item
-:
-first
--
-of
--
-type
-[
-checked
-]
-:
-hover
-:
-active
-:
--
-moz
--
-locale
--
-dir
-(
-ltr
-)
-{
-border
--
-image
-:
-url
-(
-"
-breadcrumbs
-/
-ltr
--
-start
--
-selected
--
-pressed
-.
-png
-"
-)
-1
-13
-2
-13
-fill
-stretch
-;
-}
-.
-breadcrumbs
--
-widget
--
-item
-:
-last
--
-of
--
-type
-:
--
-moz
--
-locale
--
-dir
-(
-ltr
-)
-{
-border
--
-image
-:
-url
-(
-"
-breadcrumbs
-/
-ltr
--
-end
-.
-png
-"
-)
-1
-13
-2
-13
-fill
-stretch
-;
-}
-.
-breadcrumbs
--
-widget
--
-item
-:
-last
--
-of
--
-type
-:
-not
-(
-[
-checked
-]
-)
-:
-hover
-:
-active
-:
--
-moz
--
-locale
--
-dir
-(
-ltr
-)
-{
-border
--
-image
-:
-url
-(
-"
-breadcrumbs
-/
-ltr
--
-end
--
-pressed
-.
-png
-"
-)
-1
-13
-2
-13
-fill
-stretch
-;
-}
-.
-breadcrumbs
--
-widget
--
-item
-:
-last
--
-of
--
-type
-[
-checked
-]
-:
--
-moz
--
-locale
--
-dir
-(
-ltr
-)
-{
-border
--
-image
-:
-url
-(
-"
-breadcrumbs
-/
-ltr
--
-end
--
-selected
-.
-png
-"
-)
-1
-13
-2
-13
-fill
-stretch
-;
-}
-.
-breadcrumbs
--
-widget
--
-item
-:
-last
--
-of
--
-type
-[
-checked
-]
-:
-hover
-:
-active
-:
--
-moz
--
-locale
--
-dir
-(
-ltr
-)
-{
-border
--
-image
-:
-url
-(
-"
-breadcrumbs
-/
-ltr
--
-end
--
-selected
--
-pressed
-.
-png
-"
-)
-1
-13
-2
-13
-fill
-stretch
-;
-}
-.
-breadcrumbs
--
-widget
--
-container
-[
-overflows
-]
->
-.
-breadcrumbs
--
-widget
--
-item
-:
-first
--
-of
--
-type
-:
--
-moz
--
-locale
--
-dir
-(
-ltr
-)
-{
-border
--
-left
--
-width
-:
-0
-;
-}
-.
-breadcrumbs
--
-widget
--
-container
-[
-overflows
-]
->
-.
-breadcrumbs
--
-widget
--
-item
-:
-last
--
-of
--
-type
-:
--
-moz
--
-locale
--
-dir
-(
-ltr
-)
-{
-border
--
-right
--
-width
-:
-0
-;
-}
-.
-breadcrumbs
--
-widget
--
-item
-:
--
-moz
--
-locale
--
-dir
-(
-rtl
-)
-{
-border
--
-image
-:
-url
-(
-"
-breadcrumbs
-/
-rtl
--
-middle
-.
-png
-"
-)
-1
-13
-2
-13
-fill
-stretch
-;
-}
-.
-breadcrumbs
--
-widget
--
-item
-:
-not
-(
-[
-checked
-]
-)
-:
-hover
-:
-active
-:
--
-moz
--
-locale
--
-dir
-(
-rtl
-)
-{
-border
--
-image
-:
-url
-(
-"
-breadcrumbs
-/
-rtl
--
-middle
--
-pressed
-.
-png
-"
-)
-1
-13
-2
-13
-fill
-stretch
-;
-}
-.
-breadcrumbs
--
-widget
--
-item
-[
-checked
-]
-:
--
-moz
--
-locale
--
-dir
-(
-rtl
-)
-{
-border
--
-image
-:
-url
-(
-"
-breadcrumbs
-/
-rtl
--
-middle
--
-selected
-.
-png
-"
-)
-1
-13
-2
-13
-fill
-stretch
-;
-}
-.
-breadcrumbs
--
-widget
--
-item
-[
-checked
-]
-:
-hover
-:
-active
-:
--
-moz
--
-locale
--
-dir
-(
-rtl
-)
-{
-border
--
-image
-:
-url
-(
-"
-breadcrumbs
-/
-rtl
--
-middle
--
-selected
--
-pressed
-.
-png
-"
-)
-1
-13
-2
-13
-fill
-stretch
-;
-}
-.
-breadcrumbs
--
-widget
--
-item
-:
-first
--
-of
--
-type
-:
--
-moz
--
-locale
--
-dir
-(
-rtl
-)
-{
-border
--
-image
-:
-url
-(
-"
-breadcrumbs
-/
-rtl
--
-start
-.
-png
-"
-)
-1
-13
-2
-13
-fill
-stretch
-;
-}
-.
-breadcrumbs
--
-widget
--
-item
-:
-first
--
-of
--
-type
-:
-not
-(
-[
-checked
-]
-)
-:
-hover
-:
-active
-:
--
-moz
--
-locale
--
-dir
-(
-rtl
-)
-{
-border
--
-image
-:
-url
-(
-"
-breadcrumbs
-/
-rtl
--
-start
--
-pressed
-.
-png
-"
-)
-1
-13
-2
-13
-fill
-stretch
-;
-}
-.
-breadcrumbs
--
-widget
--
-item
-:
-first
--
-of
--
-type
-[
-checked
-]
-:
--
-moz
--
-locale
--
-dir
-(
-rtl
-)
-{
-border
--
-image
-:
-url
-(
-"
-breadcrumbs
-/
-rtl
--
-start
--
-selected
-.
-png
-"
-)
-1
-13
-2
-13
-fill
-stretch
-;
-}
-.
-breadcrumbs
--
-widget
--
-item
-:
-first
--
-of
--
-type
-[
-checked
-]
-:
-hover
-:
-active
-:
--
-moz
--
-locale
--
-dir
-(
-rtl
-)
-{
-border
--
-image
-:
-url
-(
-"
-breadcrumbs
-/
-rtl
--
-start
--
-selected
--
-pressed
-.
-png
-"
-)
-1
-13
-2
-13
-fill
-stretch
-;
-}
-.
-breadcrumbs
--
-widget
--
-item
-:
-last
--
-of
--
-type
-:
--
-moz
--
-locale
--
-dir
-(
-rtl
-)
-{
-border
--
-image
-:
-url
-(
-"
-breadcrumbs
-/
-rtl
--
-end
-.
-png
-"
-)
-1
-13
-2
-13
-fill
-stretch
-;
-}
-.
-breadcrumbs
--
-widget
--
-item
-:
-last
--
-of
--
-type
-:
-not
-(
-[
-checked
-]
-)
-:
-hover
-:
-active
-:
--
-moz
--
-locale
--
-dir
-(
-rtl
-)
-{
-border
--
-image
-:
-url
-(
-"
-breadcrumbs
-/
-rtl
--
-end
--
-pressed
-.
-png
-"
-)
-1
-13
-2
-13
-fill
-stretch
-;
-}
-.
-breadcrumbs
--
-widget
--
-item
-:
-last
--
-of
--
-type
-[
-checked
-]
-:
--
-moz
--
-locale
--
-dir
-(
-rtl
-)
-{
-border
--
-image
-:
-url
-(
-"
-breadcrumbs
-/
-rtl
--
-end
--
-selected
-.
-png
-"
-)
-1
-13
-2
-13
-fill
-stretch
-;
-}
-.
-breadcrumbs
--
-widget
--
-item
-:
-last
--
-of
--
-type
-[
-checked
-]
-:
-hover
-:
-active
-:
--
-moz
--
-locale
--
-dir
-(
-rtl
-)
-{
-border
--
-image
-:
-url
-(
-"
-breadcrumbs
-/
-rtl
--
-end
--
-selected
--
-pressed
-.
-png
-"
-)
-1
-13
-2
-13
-fill
-stretch
-;
-}
-.
-breadcrumbs
--
-widget
--
-container
-[
-overflows
-]
->
-.
-breadcrumbs
--
-widget
--
-item
-:
-first
--
-of
--
-type
-:
--
-moz
--
-locale
--
-dir
-(
-rtl
-)
-{
-border
--
-right
--
-width
-:
-0
-;
-}
-.
-breadcrumbs
--
-widget
--
-container
-[
-overflows
-]
->
-.
-breadcrumbs
--
-widget
--
-item
-:
-last
--
-of
--
-type
-:
--
-moz
--
-locale
--
-dir
-(
-rtl
-)
-{
-border
--
-left
--
-width
-:
-0
+#
+d99b28
 ;
 }
 %
